--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-14 [缅甸抗议示威进入第二周 军方无意妥协 抗议者在中国使馆外示威](/articles/voa/1042948.md)
+
+2-14 [时事大家谈：英国变体再突变 3月可能成为美国主要毒株](/articles/voa/1042949.md)
+
 2-14 [时事大家谈：中国多地疫情反弹 就地过年还是回家团圆？](/articles/voa/1042950.md)
 
 2-14 [冠病溯源调查帮中国甩锅？WHO被指自损公信力](/articles/voa/1042951.md)
@@ -596,8 +600,4 @@
 2-3 [美参议院批准马约卡斯出任国土安全部长](/articles/voa/1043246.md)
 
 2-3 [白宫要义: 拜登将待适当时机才与习近平通话，会民主党参议员讨论新冠纾困](/articles/voa/1043247.md)
-
-2-3 [VOA连线(张蓉湘): 缅甸政变 军方可能面临制裁](/articles/voa/1043248.md)
-
-2-3 [哥大法学院以美国首位华人律师张康仁命名中国法律研究中心](/articles/voa/1043249.md)
 
