--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-14 [法国建议Covid已感染者只打一剂疫苗](/articles/rfi/1034774.md)
+
 2-13 [世卫调查组员透露：中国拒绝向世卫组织团队提供早期新冠病例的原始数据](/articles/rfi/1034775.md)
 
 2-13 [张文宏指疫苗看来可应对病毒突变](/articles/rfi/1034776.md)
@@ -598,6 +600,4 @@
 2-8 [拜登上任为缓解气候危机带来希望 - 环境与发展](/articles/rfi/1035072.md)
 
 2-8 [科西嘉纪念拿破仑去世两百年 - 法国文艺欣赏](/articles/rfi/1035073.md)
-
-2-8 [印度冰河崩落酿暴洪 至少14死125人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1035074.md)
 
