--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-14 [【旧闻重温】黄章晋 | 请对他们说一句“yahximusiz”](/articles/cdt/385936.md)
+
 2-13 [哎呀音乐｜被称为中国第一首贺岁歌的《恭喜恭喜》，你真的听懂了吗？](/articles/cdt/385939.md)
 
 2-13 [【异闻观止】人民日报：“春晚的总体美誉度达96.17%”](/articles/cdt/385941.md)
@@ -598,6 +600,4 @@
 1-14 [【时代的一粒沙】极昼工作室 | “那个扫垃圾的”在新年举办葬礼](/articles/cdt/387100.md)
 
 1-14 [阿强：如果异性恋的权利是一斤，同志的就不能是八两！](/articles/cdt/387102.md)
-
-1-14 [行走吃瓜圈 | 重磅爆料，我在拼多多的三年](/articles/cdt/387103.md)
 
