--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-14 [日本发生强震，导致大面积断电](/articles/voa/1042945.md)
+
 2-14 [中国拒绝提供疫情早期数据 白宫对世卫小组在中国调查的独立性“深表关注”](/articles/voa/1042946.md)
 
 2-14 [疫情卷土重来 澳门博彩业春节黄金档前景未明](/articles/voa/1042947.md)
@@ -598,6 +600,4 @@
 2-3 [联合国人权专家：国际社会对缅甸政变的回应必须毫不含糊](/articles/voa/1043243.md)
 
 2-3 [通过虚拟现实培训员工日益风行](/articles/voa/1043244.md)
-
-2-3 [暌违四年 宠物狗随拜登重回白宫](/articles/voa/1043245.md)
 
