--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-14 [阿富汗边境大火导致至少60人受伤](/articles/voa/1042944.md)
+
 2-14 [日本发生强震，导致大面积断电](/articles/voa/1042945.md)
 
 2-14 [中国拒绝提供疫情早期数据 白宫对世卫小组在中国调查的独立性“深表关注”](/articles/voa/1042946.md)
@@ -598,6 +600,4 @@
 2-3 [拜登宣布增加新冠疫苗](/articles/voa/1043242.md)
 
 2-3 [联合国人权专家：国际社会对缅甸政变的回应必须毫不含糊](/articles/voa/1043243.md)
-
-2-3 [通过虚拟现实培训员工日益风行](/articles/voa/1043244.md)
 
