--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-14 [一个人的地理志 | 维吾尔的黑眼睛](/articles/cdt/385933.md)
+
 2-14 [【旧闻重温】黄章晋 | 请对他们说一句“yahximusiz”](/articles/cdt/385936.md)
 
 2-14 [新知谷｜刚过一年，有人就迫不及待粉饰、篡改历史了？！](/articles/cdt/385938.md)
@@ -598,6 +600,4 @@
 1-14 [【立此存照】“你是人民日报的亲儿子吧？赞那么少为啥排第一？”](/articles/cdt/387081.md)
 
 1-14 [【图说天朝】江苏防疫标语：与其返乡隔离十四天，不如留苏多赚四五千](/articles/cdt/387097.md)
-
-1-14 [【时代的一粒沙】极昼工作室 | “那个扫垃圾的”在新年举办葬礼](/articles/cdt/387100.md)
 
