--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-14 [法新社统计  欧洲累计染疫不治破80万例 – 法国国际广播电台 - RFI](/articles/rfi/1034761.md)
+
+2-14 [弹劾案参院判无罪 川普：让美国再次伟大运动才刚开始 – 法国国际广播电台 - RFI](/articles/rfi/1034762.md)
+
 2-14 [武汉之行后世卫组织又遭遇滑铁卢 - 要闻分析](/articles/rfi/1034763.md)
 
 2-14 [美参议院否决特朗普弹劾条款，特朗普发声暗示后会有期](/articles/rfi/1034764.md)
@@ -596,8 +600,4 @@
 2-8 [菅义伟：不接受中国海警法加剧紧张的运用](/articles/rfi/1035059.md)
 
 2-8 [世卫专家再谈武汉华南海鲜市场](/articles/rfi/1035060.md)
-
-2-8 [缅甸反政变示威升温 军方示意可能镇压 – 法国国际广播电台 - RFI](/articles/rfi/1035061.md)
-
-2-8 [博雷利：俄罗斯拒绝对话，欧盟应采取相应措施](/articles/rfi/1035062.md)
 
