--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-14 [逾300辆油罐车爆炸 阿富汗边城宛如炼狱 – 法国国际广播电台 - RFI](/articles/rfi/1034756.md)
+
+2-14 [几内亚出现2起伊波拉疑似病例 世卫展开确认检测 – 法国国际广播电台 - RFI](/articles/rfi/1034757.md)
+
+2-14 [不满恋情曝光扬言毁掉女记者 白宫副发言人请辞 – 法国国际广播电台 - RFI](/articles/rfi/1034758.md)
+
+2-14 [伊波拉疫情再袭几内亚夺4命 – 法国国际广播电台 - RFI](/articles/rfi/1034759.md)
+
 2-14 [英将主持G7领袖会议 抗疫合作列首要议题 – 法国国际广播电台 - RFI](/articles/rfi/1034760.md)
 
 2-14 [法新社统计  欧洲累计染疫不治破80万例 – 法国国际广播电台 - RFI](/articles/rfi/1034761.md)
@@ -592,12 +600,4 @@
 2-8 [美国是否派队参加东京奥运？ 拜登：仍待观察 – 法国国际广播电台 - RFI](/articles/rfi/1035054.md)
 
 2-8 [拜登政府宣布重返联合国人权理事会](/articles/rfi/1035055.md)
-
-2-8 [前球后柯贝澳网首轮落马 提姆克服开赛不稳晋级 – 法国国际广播电台 - RFI](/articles/rfi/1035056.md)
-
-2-8 [美国新振兴方案过关希望浓 亚股收高 – 法国国际广播电台 - RFI](/articles/rfi/1035057.md)
-
-2-8 [CGTN澳籍记者成蕾证实被捕 被指涉泄漏国家机密](/articles/rfi/1035058.md)
-
-2-8 [菅义伟：不接受中国海警法加剧紧张的运用](/articles/rfi/1035059.md)
 
