--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-14 [澳大利亚和台湾签署自贸协定是否有好处？](/articles/dw/1043912.md)
+
+2-14 [太平洋岛国分歧 中国恐趁虚而入](/articles/dw/1043913.md)
+
+2-14 [七张图看一周大事](/articles/dw/1043914.md)
+
 2-13 [缅甸抗议升级 民众自发互助](/articles/dw/1043915.md)
 
 2-13 [回应安全质疑 Clubhouse称将加强数据保护](/articles/dw/1043916.md)
@@ -594,10 +600,4 @@
 1-28 [建立竞合关系 中美联合国角力持续](/articles/dw/1044210.md)
 
 1-27 [台湾许诺向汽车业提供帮助 解决芯片短缺难题](/articles/dw/1044211.md)
-
-1-27 [北京严控人员进返引热议](/articles/dw/1044212.md)
-
-1-27 [疫情重创经济  德国政府下调2021年增长预期](/articles/dw/1044213.md)
-
-1-27 [犹太大屠杀纪念日：“反犹主义起于阴谋论”](/articles/dw/1044214.md)
 
