--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-14 [台湾各界就「武汉肺炎」名称展开论战](/articles/rfi/1034736.md)
+
+2-14 [二次弹劾失败 特朗普无罪 拜登怎么回应？](/articles/rfi/1034737.md)
+
+2-14 [日本福岛、宫城地震伤120人以上 没有人死亡](/articles/rfi/1034738.md)
+
+2-14 [马英九促用中国疫苗 陈时中澄清拒绝理由](/articles/rfi/1034739.md)
+
 2-14 [新疆新眼球？ 鼓励官员网红直播](/articles/rfi/1034740.md)
 
 2-14 [印度制裁下 抖音印度业务酝酿出卖](/articles/rfi/1034741.md)
@@ -592,12 +600,4 @@
 2-9 [缅甸大规模示威抗议政变 军方颁布戒严令](/articles/rfi/1035034.md)
 
 2-9 [周期股领涨 欧股上扬 – 法国国际广播电台 - RFI](/articles/rfi/1035035.md)
-
-2-9 [美首位现任国会议员染疫身亡 莱特辞世 – 法国国际广播电台 - RFI](/articles/rfi/1035036.md)
-
-2-9 [弹劾案参院审理在即 特朗普律师批评是“政治戏码”](/articles/rfi/1035037.md)
-
-2-9 [英媒：近200位英国学者因涉华研究被调查](/articles/rfi/1035038.md)
-
-2-9 [印军方人士：解放军持续强化中印实际控制线兵力](/articles/rfi/1035039.md)
 
