--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-14 [热闹的二月：三艘航天器探火星](/articles/dw/1043904.md)
+
+2-14 [德国名拖鞋Birkenstock或被出售](/articles/dw/1043905.md)
+
+2-14 [墙外文摘：拜登和习近平通话说了什么？](/articles/dw/1043906.md)
+
 2-14 [弹劾案2.0落幕 特朗普“煽动冲击国会”罪名不成](/articles/dw/1043907.md)
 
 2-14 [日本福岛附近7.3级地震 核电设施未受损](/articles/dw/1043908.md)
@@ -594,10 +600,4 @@
 1-28 [德国市长谋杀案：凶犯被判终身监禁](/articles/dw/1044202.md)
 
 1-28 [安全部门：美国面临“恐怖威胁”](/articles/dw/1044203.md)
-
-1-28 [日本川崎市辦「疫苗接種演習」](/articles/dw/1044204.md)
-
-1-28 [美推迟部份中国军工投资禁令 为什么?](/articles/dw/1044205.md)
-
-1-28 [澳智库公布新冠防疫排名 新西兰与台湾名列前茅](/articles/dw/1044206.md)
 
