--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-14 [参议院表决特朗普无罪 拜登惋惜“民主很脆弱” - 法国报纸摘要](/articles/rfi/1034734.md)
+
+2-14 [媒体观察：中美价值观与政治动荡 - 曼谷专栏](/articles/rfi/1034735.md)
+
 2-14 [台湾各界就「武汉肺炎」名称展开论战](/articles/rfi/1034736.md)
 
 2-14 [二次弹劾失败 特朗普无罪 拜登怎么回应？](/articles/rfi/1034737.md)
@@ -596,8 +600,4 @@
 2-9 [联合国人权理事会将召开特别会议讨论缅甸政变后局势](/articles/rfi/1035032.md)
 
 2-9 [法国卫生部长接种阿斯利康疫苗  英国指阿斯利康疫苗对新冠病毒有效](/articles/rfi/1035033.md)
-
-2-9 [缅甸大规模示威抗议政变 军方颁布戒严令](/articles/rfi/1035034.md)
-
-2-9 [周期股领涨 欧股上扬 – 法国国际广播电台 - RFI](/articles/rfi/1035035.md)
 
