--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-14 [中国在拉美：来了就没想走](/articles/dw/1043902.md)
+
+2-14 [德国超市Lidl提高肉价　消费者为何不买帐？](/articles/dw/1043903.md)
+
 2-14 [热闹的二月：三艘航天器探火星](/articles/dw/1043904.md)
 
 2-14 [德国名拖鞋Birkenstock或被出售](/articles/dw/1043905.md)
@@ -596,8 +600,4 @@
 1-28 [新西兰贸易部长澄清澳中关系表态](/articles/dw/1044200.md)
 
 1-28 [称新疆无种族灭绝 香港建制派议员遭嘲讽](/articles/dw/1044201.md)
-
-1-28 [德国市长谋杀案：凶犯被判终身监禁](/articles/dw/1044202.md)
-
-1-28 [安全部门：美国面临“恐怖威胁”](/articles/dw/1044203.md)
 
