--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-14 [中方反驳美国指责 世卫专家斥媒体断章取义](/articles/dw/1043900.md)
+
+2-14 [担心变种病毒“入侵” 德国关闭部分边境](/articles/dw/1043901.md)
+
 2-14 [中国在拉美：来了就没想走](/articles/dw/1043902.md)
 
 2-14 [德国超市Lidl提高肉价　消费者为何不买帐？](/articles/dw/1043903.md)
@@ -596,8 +600,4 @@
 1-28 [偏心？违约？欧盟与阿斯利康的疫苗供货之争](/articles/dw/1044198.md)
 
 1-28 [中国军方：“台独就意味着战争”](/articles/dw/1044199.md)
-
-1-28 [新西兰贸易部长澄清澳中关系表态](/articles/dw/1044200.md)
-
-1-28 [称新疆无种族灭绝 香港建制派议员遭嘲讽](/articles/dw/1044201.md)
 
