--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-14 [维舟 |  在流动中管理](/articles/cdt/385919.md)
+
 2-14 [大鱼论事  |  沸腾的物价和楼市：闲人闪开，别崩身上血](/articles/cdt/385920.md)
 
 2-14 [非常魏道  |  能看完今年春晚的人你惹不起](/articles/cdt/385921.md)
@@ -598,6 +600,4 @@
 1-15 [贺卫方：关于美国总统的推特自由](/articles/cdt/387065.md)
 
 1-14 [【CDT连载】巴奴的救赎（24）](/articles/cdt/387069.md)
-
-1-14 [人间思想笔记｜任正非如果看了小女儿的微博留言，怕是要哭](/articles/cdt/387070.md)
 
