--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-14 [英国也对世卫武汉调查结果表示担忧 中国回应白宫周六声明](/articles/voa/1042940.md)
+
 2-14 [参议院宣布特朗普在第二次弹劾案中无罪](/articles/voa/1042941.md)
 
 2-14 [经历一夜恐惧，成千上万缅甸抗议者无惧军方撤法继续走上街头](/articles/voa/1042942.md)
@@ -598,6 +600,4 @@
 2-3 [参院弹劾审判前 众院民主党人与特朗普的律师针锋相对陈述观点](/articles/voa/1043238.md)
 
 2-3 [报告吁美加强与东南亚关系应对中国在地区日增的影响力](/articles/voa/1043239.md)
-
-2-3 [环保人士担心美墨边境墙会造成永久性的环境破坏](/articles/voa/1043240.md)
 
