--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-15 [英国新冠疫苗注射人数阶段达标全球领先 “要一针一针打败病毒”](/articles/rfi/1034718.md)
+
+2-15 [拜登要求美国立即改革军火贩售](/articles/rfi/1034719.md)
+
 2-15 [Covid-19 : 美国纽约餐馆重开室内就餐](/articles/rfi/1034720.md)
 
 2-15 [微信传马云发红包 江西大量老人排队 公安紧急辟谣](/articles/rfi/1034721.md)
@@ -596,8 +600,4 @@
 2-9 [法新社：首宗国安法直接交法官审理不设陪审团](/articles/rfi/1035016.md)
 
 2-9 [南非暂停施打AZ疫苗 WHO：不要放弃AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1035017.md)
-
-2-9 [国际谴责缅甸政变声浪高涨 – 法国国际广播电台 - RFI](/articles/rfi/1035018.md)
-
-2-9 [川普二度弹劾审讯在即 律师团队：简直荒谬 – 法国国际广播电台 - RFI](/articles/rfi/1035019.md)
 
