--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-15 [美国亚裔遭攻击事件激增 拜登总统谴责暴力并采取行动](/articles/voa/1042939.md)
+
 2-14 [英国也对世卫武汉调查结果表示担忧 中国回应白宫周六声明](/articles/voa/1042940.md)
 
 2-14 [参议院宣布特朗普在第二次弹劾案中无罪](/articles/voa/1042941.md)
@@ -598,6 +600,4 @@
 2-3 [遏制中共对台威胁 美副防长人选：美台需紧密合作](/articles/voa/1043237.md)
 
 2-3 [参院弹劾审判前 众院民主党人与特朗普的律师针锋相对陈述观点](/articles/voa/1043238.md)
-
-2-3 [报告吁美加强与东南亚关系应对中国在地区日增的影响力](/articles/voa/1043239.md)
 
