--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-15 [传：周日傍晚军方装甲车出现在仰光等大城市](/articles/rfi/1034717.md)
+
 2-15 [英国新冠疫苗注射人数阶段达标全球领先 “要一针一针打败病毒”](/articles/rfi/1034718.md)
 
 2-15 [拜登要求美国立即改革军火贩售](/articles/rfi/1034719.md)
@@ -598,6 +600,4 @@
 2-9 [黎智英不准保释须继续还押](/articles/rfi/1035015.md)
 
 2-9 [法新社：首宗国安法直接交法官审理不设陪审团](/articles/rfi/1035016.md)
-
-2-9 [南非暂停施打AZ疫苗 WHO：不要放弃AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1035017.md)
 
