--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-15 [BBC | 世卫调查人员指中国不提供早期患者原始数据 白宫表示关注](/articles/cdt/385916.md)
+
 2-15 [秦川雁塔 | 秦晖：从“神剧”到“浑剧”](/articles/cdt/385918.md)
 
 2-14 [维舟 |  在流动中管理](/articles/cdt/385919.md)
@@ -598,6 +600,4 @@
 1-15 [【异闻观止】大连车务段｜全力攻关Flash Player一昼夜，确保运输三十站](/articles/cdt/387061.md)
 
 1-29 [【CDT 审查月报】2021年1月中国言论审查纪要：一月是重复的一个月](/articles/cdt/387063.md)
-
-1-15 [贺卫方：关于美国总统的推特自由](/articles/cdt/387065.md)
 
