--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-15 [打过疫苗可入境：“优等生”以色列和塞浦路斯互推“新冠疫苗护照”](/articles/rfi/1034712.md)
+
+2-15 [缅甸局势僵持半月 对立双方均无软化苗头](/articles/rfi/1034713.md)
+
 2-15 [情人节俄罗斯民众向反对派纳瓦尔尼“示爱”](/articles/rfi/1034714.md)
 
 2-15 [科索沃2021立法选举 翻开历史新页？](/articles/rfi/1034715.md)
@@ -596,8 +600,4 @@
 2-9 [连两战延长分高下  湖人力克雷霆夺5连胜 – 法国国际广播电台 - RFI](/articles/rfi/1035010.md)
 
 2-9 [菅义伟表示对中国实行《海警法》强烈关切](/articles/rfi/1035011.md)
-
-2-9 [蔡英文：台美关系依然稳定愿促成两岸有意义对话](/articles/rfi/1035012.md)
-
-2-9 [澳门明接收大陆10万剂药苗明开始接种](/articles/rfi/1035013.md)
 
