--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-15 [二度弹劾被判无罪 特朗普表示MAGA运动“才刚刚开始”](/articles/ft/1046059.md)
+
 2-10 [让全世界都能接种上疫苗](/articles/ft/1046060.md)
 
 2-10 [朝核危机不是“死结”](/articles/ft/1046061.md)
@@ -598,6 +600,4 @@
 1-6 [中国经济数字化生产“含苞欲放”](/articles/ft/1046357.md)
 
 1-6 [美安全机构：俄很可能为一起大规模网络入侵行动主使](/articles/ft/1046358.md)
-
-1-6 [约翰逊：每50个英格兰人中就有1人感染新冠](/articles/ft/1046359.md)
 
