--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-15 [拜登将在星期五的七国集团会议上讨论疫情、经济和中国问题](/articles/voa/1042933.md)
+
 2-15 [学者解读弹劾审判：党派政治扮演重要角色](/articles/voa/1042934.md)
 
 2-15 [美国的新冠病毒病例出现下降](/articles/voa/1042935.md)
@@ -598,6 +600,4 @@
 2-3 [春节将至 中国农民工的讨薪脱贫梦](/articles/voa/1043231.md)
 
 2-3 [拜登政府正策划朝鲜政策 专家：显著推进半岛无核化的希望渺茫](/articles/voa/1043232.md)
-
-2-3 [五角大楼宣布将尼米兹号航母调离中东 三艘航母同时现身印太](/articles/voa/1043233.md)
 
