--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-15 [高耀洁 | 93岁的我，一生都在逃难](/articles/cdt/385912.md)
+
 2-15 [【旧闻重温】Matters | 新疆有所思想教育改造中心](/articles/cdt/385915.md)
 
 2-15 [BBC | 世卫调查人员指中国不提供早期患者原始数据 白宫表示关注](/articles/cdt/385916.md)
@@ -598,6 +600,4 @@
 1-15 [红星新闻｜“全国差评最少的外卖站之一”：零下40℃ 我在漠河送外卖](/articles/cdt/387046.md)
 
 1-15 [端传媒 | 科技巨头拼多多员工过劳死：数字时代，打工人维权的劳动法之困（节选）](/articles/cdt/387048.md)
-
-1-15 [【异闻观止】大连车务段｜全力攻关Flash Player一昼夜，确保运输三十站](/articles/cdt/387061.md)
 
