--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 2-15 [BBC | 世卫调查人员指中国不提供早期患者原始数据 白宫表示关注](/articles/cdt/385916.md)
 
+2-15 [【CDT周报】第四期：我既然以自由为人生的标配，那么理应为自由付出代价](/articles/cdt/385917.md)
+
 2-15 [秦川雁塔 | 秦晖：从“神剧”到“浑剧”](/articles/cdt/385918.md)
 
 2-14 [维舟 |  在流动中管理](/articles/cdt/385919.md)
@@ -598,6 +600,4 @@
 1-15 [德国之声 | 长平观察：台湾入联——与其重返，不如重建](/articles/cdt/387044.md)
 
 1-15 [红星新闻｜“全国差评最少的外卖站之一”：零下40℃ 我在漠河送外卖](/articles/cdt/387046.md)
-
-1-15 [端传媒 | 科技巨头拼多多员工过劳死：数字时代，打工人维权的劳动法之困（节选）](/articles/cdt/387048.md)
 
