--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-15 [以色列研究：辉瑞&amp;BNT疫苗效力达94% – 法国国际广播电台 - RFI](/articles/rfi/1034705.md)
+
+2-15 [皮古拉拍落丝薇托莉娜 首晋澳网女单8强 – 法国国际广播电台 - RFI](/articles/rfi/1034706.md)
+
 2-15 [加泰隆尼亚议会选举 独派席次增 – 法国国际广播电台 - RFI](/articles/rfi/1034707.md)
 
 2-15 [缅甸军方开枪驱离示威者 至少5名记者遭逮捕 – 法国国际广播电台 - RFI](/articles/rfi/1034708.md)
@@ -596,8 +600,4 @@
 2-9 [加拿大“救生艇”港人工作签证开始接受申请](/articles/rfi/1035003.md)
 
 2-9 [布林肯：特朗普对华采取更强硬的态度是正确的](/articles/rfi/1035004.md)
-
-2-9 [日防卫大臣向美国表示不接受中国海警法](/articles/rfi/1035005.md)
-
-2-9 [拜登上台后 美海军首度双航母南海军演](/articles/rfi/1035006.md)
 
