--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-15 [英国已1500万人施打疫苗 续推下阶段接种 – 法国国际广播电台 - RFI](/articles/rfi/1034704.md)
+
 2-15 [以色列研究：辉瑞&amp;BNT疫苗效力达94% – 法国国际广播电台 - RFI](/articles/rfi/1034705.md)
 
 2-15 [皮古拉拍落丝薇托莉娜 首晋澳网女单8强 – 法国国际广播电台 - RFI](/articles/rfi/1034706.md)
@@ -598,6 +600,4 @@
 2-9 [耿潇男当庭认罪被判三年监禁](/articles/rfi/1035002.md)
 
 2-9 [加拿大“救生艇”港人工作签证开始接受申请](/articles/rfi/1035003.md)
-
-2-9 [布林肯：特朗普对华采取更强硬的态度是正确的](/articles/rfi/1035004.md)
 
