--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-15 [【图说天朝】大年三十女儿不能回家住，这破风俗还存在？](/articles/cdt/385910.md)
+
 2-15 [高耀洁 | 93岁的我，一生都在逃难](/articles/cdt/385912.md)
 
 2-15 [【旧闻重温】Matters | 新疆有所思想教育改造中心](/articles/cdt/385915.md)
@@ -598,6 +600,4 @@
 1-15 [【麻辣总局】“人民相信党 没有好下场”](/articles/cdt/387038.md)
 
 1-15 [德国之声 | 长平观察：台湾入联——与其重返，不如重建](/articles/cdt/387044.md)
-
-1-15 [红星新闻｜“全国差评最少的外卖站之一”：零下40℃ 我在漠河送外卖](/articles/cdt/387046.md)
 
