--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-15 [秘鲁曝官员抢先打新冠疫苗丑闻 两位部长辞职](/articles/rfi/1034680.md)
+
+2-15 [世卫去武汉专家称新发现：2019年12月武汉已有13种病毒株](/articles/rfi/1034681.md)
+
+2-15 [球风自由奔放 网球独行侠谢淑薇魅力迷人 – 法国国际广播电台 - RFI](/articles/rfi/1034682.md)
+
+2-15 [英国变种病毒证实首度现踪纽西兰 – 法国国际广播电台 - RFI](/articles/rfi/1034683.md)
+
 2-15 [港媒指警队拟改向捷克买枪枝 评论指有变数](/articles/rfi/1034684.md)
 
 2-15 [黎智英案开审前夕 大状阵前易帅 原大状遭以严苛条件隔离检疫](/articles/rfi/1034685.md)
@@ -592,12 +600,4 @@
 2-10 [新冠溯源：世卫小组没能确定疫情的起源 - 法国世界报](/articles/rfi/1034978.md)
 
 2-10 [中国出生率历史性塌陷 1949年以来最低水平](/articles/rfi/1034979.md)
-
-2-10 [所有人都在谈论弹劾审判 特朗普拜登除外 - 要闻分析](/articles/rfi/1034980.md)
-
-2-10 [法国新冠死亡人数越过8万人大关](/articles/rfi/1034981.md)
-
-2-10 [特朗普律师指责弹劾审判&quot;极具政治性&quot; 将造成国家分裂](/articles/rfi/1034982.md)
-
-2-10 [缅甸军方突袭民主联盟总部 欧盟将出台针对缅甸军方新的制裁措施](/articles/rfi/1034983.md)
 
