--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-15 [牛年春节档期 中国电影转折点？](/articles/voa/1042929.md)
+
 2-15 [习近平最新亲民秀看点何在](/articles/voa/1042930.md)
 
 2-15 [代理12港人案被中国当局停牌 律师卢思位遗憾不能再为当事人在法庭发声](/articles/voa/1042931.md)
@@ -598,6 +600,4 @@
 2-4 [国际人权团体联盟呼吁抵制北京冬奥会](/articles/voa/1043227.md)
 
 2-4 [报告称如果中国入侵台湾 美多数意见领袖支持保护台湾](/articles/voa/1043228.md)
-
-2-4 [世卫专家访问武汉病毒所 他们含蓄表示：有一定收获](/articles/voa/1043229.md)
 
