--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-15 [比尔盖茨这样谈核电](/articles/rfi/1034677.md)
+
+2-15 [海地民众控总统搞独裁 部分抗议者与警方冲突 – 法国国际广播电台 - RFI](/articles/rfi/1034678.md)
+
+2-15 [传以色列飞弹攻击大马士革附近目标 至少9人死亡 – 法国国际广播电台 - RFI](/articles/rfi/1034679.md)
+
 2-15 [秘鲁曝官员抢先打新冠疫苗丑闻 两位部长辞职](/articles/rfi/1034680.md)
 
 2-15 [世卫去武汉专家称新发现：2019年12月武汉已有13种病毒株](/articles/rfi/1034681.md)
@@ -594,10 +600,4 @@
 2-10 [轻取2019美网冠军 谢淑薇挺进澳网女单第3轮 – 法国国际广播电台 - RFI](/articles/rfi/1034975.md)
 
 2-10 [篮网遭垫底活赛痛电 教头看不下去球队烂防守 – 法国国际广播电台 - RFI](/articles/rfi/1034976.md)
-
-2-10 [世卫武汉调查结束能否消除疑问](/articles/rfi/1034977.md)
-
-2-10 [新冠溯源：世卫小组没能确定疫情的起源 - 法国世界报](/articles/rfi/1034978.md)
-
-2-10 [中国出生率历史性塌陷 1949年以来最低水平](/articles/rfi/1034979.md)
 
