--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-16 [孙杨微博更新 传新消息](/articles/rfi/1034669.md)
+
 2-15 [澳大利亚强卸地方政府一带一路项目？](/articles/rfi/1034670.md)
 
 2-15 [拜仁慕尼黑删台湾旗并对中国人道歉 仍被斥顶尖“乳滑”](/articles/rfi/1034671.md)
@@ -598,6 +600,4 @@
 2-10 [白宫发言人：将仔细评估WHO称新冠病毒极不可能来自实验室的报告](/articles/rfi/1034967.md)
 
 2-10 [加拿大对港移民“救生艇”计划无年龄语言限制](/articles/rfi/1034968.md)
-
-2-10 [蚂蚁金服2018年上市失败连累一众国际大鳄](/articles/rfi/1034969.md)
 
