--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-16 [世卫专家组：新冠病毒在武汉爆发前的传播范围比之前想象的更广泛](/articles/voa/1042924.md)
+
 2-16 [美联社调查：中国散布了大量有关新冠疫情的虚假信息](/articles/voa/1042925.md)
 
 2-16 [美国人纪念美国总统日](/articles/voa/1042926.md)
@@ -598,6 +600,4 @@
 2-4 [两党领袖达成协议 民主党将控制美参议院各委员会](/articles/voa/1043222.md)
 
 2-4 [时事大家谈: 严词抨击缅甸政变，拜登或首次与北京交锋？](/articles/voa/1043223.md)
-
-2-4 [Burma or Myanmar？美国对缅甸的称呼有何玄机？](/articles/voa/1043224.md)
 
