--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+2-16 [澳大利亚总理：“一带一路”对澳大利亚没有任何好处](/articles/voa/1042920.md)
+
+2-16 [时事大家谈: 世卫武汉调查疑云再起，中国拒查原始数据？](/articles/voa/1042921.md)
+
+2-16 [58国签署宣言 反对任意拘押外国人](/articles/voa/1042922.md)
+
+2-16 [美联社：中国扩大在西方社媒影响力 散布有关新冠疫情虚假信息](/articles/voa/1042923.md)
+
 2-16 [世卫专家组：新冠病毒在武汉爆发前的传播范围比之前想象的更广泛](/articles/voa/1042924.md)
 
 2-16 [美联社调查：中国散布了大量有关新冠疫情的虚假信息](/articles/voa/1042925.md)
@@ -592,12 +600,4 @@
 2-4 [美司法部撤销指控耶鲁大学招生过程中歧视亚裔和白人学生的诉讼](/articles/voa/1043218.md)
 
 2-4 [博明向拜登政府进言：不要跌入中国的谈判陷阱](/articles/voa/1043219.md)
-
-2-4 [加拿大将“骄傲男孩“指定为恐怖主义实体](/articles/voa/1043220.md)
-
-2-4 [美两党议员提名香港亲民主运动获取今年诺贝尔和平奖](/articles/voa/1043221.md)
-
-2-4 [两党领袖达成协议 民主党将控制美参议院各委员会](/articles/voa/1043222.md)
-
-2-4 [时事大家谈: 严词抨击缅甸政变，拜登或首次与北京交锋？](/articles/voa/1043223.md)
 
