--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-16 [疫苗接种与美振兴案激励  欧股上扬 – 法国国际广播电台 - RFI](/articles/rfi/1034667.md)
+
 2-16 [世贸组织任命伊维拉为总干事 非洲女性首当掌门人](/articles/rfi/1034668.md)
 
 2-16 [孙杨微博更新 传新消息](/articles/rfi/1034669.md)
@@ -598,6 +600,4 @@
 2-10 [香港加强检测第三跑道工程防疫情爆发](/articles/rfi/1034965.md)
 
 2-10 [推特用户人数激增至逾1.9亿 – 法国国际广播电台 - RFI](/articles/rfi/1034966.md)
-
-2-10 [白宫发言人：将仔细评估WHO称新冠病毒极不可能来自实验室的报告](/articles/rfi/1034967.md)
 
