--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-16 [中国电影票房连三日破人民币10亿，农历春节和情人节相遇的好结果](/articles/rfi/1034653.md)
+
+2-16 [中国赠送的20万剂新冠疫苗抵达津巴布韦 - 法国世界报](/articles/rfi/1034654.md)
+
 2-16 [拜登打开美墨边境允许数万中美洲难民进入美国](/articles/rfi/1034655.md)
 
 2-16 [58国签署宣言要求停止任意拘押外国人](/articles/rfi/1034656.md)
@@ -596,8 +600,4 @@
 2-10 [美国务院：密切关注中印边境局势，会和友邦们站在一起](/articles/rfi/1034951.md)
 
 2-10 [科比坠机事故调查结果公布 “空间定向障碍”致飞行员迷失方向](/articles/rfi/1034952.md)
-
-2-10 [法国国家电影中心主席因涉嫌性侵教子被警方拘留](/articles/rfi/1034953.md)
-
-2-10 [新冠疫情居家工作员工每月付出成本可高达174欧元 - 今日经济](/articles/rfi/1034954.md)
 
