--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-16 [高中生经营慈善商店学习人生重要课程](/articles/voa/1042909.md)
+
+2-16 [德国官员：希望在贸易、中国和气候问题上与拜登政府密切合作](/articles/voa/1042910.md)
+
 2-16 [弹劾审判引发对国内恐怖主义的重新审视](/articles/voa/1042911.md)
 
 2-16 [记录当代中国文字狱，为“墙国”不再有因言获罪那一天](/articles/voa/1042912.md)
@@ -596,8 +600,4 @@
 2-4 [拜登再次承诺发放1400美元经济刺激支票](/articles/voa/1043207.md)
 
 2-4 [高中生翻新电脑帮助低收入学生远程学习](/articles/voa/1043208.md)
-
-2-4 [英国和日本：严重关切东中国海与南中国海局势](/articles/voa/1043209.md)
-
-2-4 [新冠疫苗供不应求 佛罗里达州严防外来客接种](/articles/voa/1043210.md)
 
