--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-16 [推全球流行病条约 英首相要北京负责](/articles/dw/1043874.md)
+
 2-16 [缅军再加强部署  反政变抗议不歇](/articles/dw/1043875.md)
 
 2-16 [COVAX将配送首批疫苗至贫困国家](/articles/dw/1043876.md)
@@ -598,6 +600,4 @@
 1-30 [散户大军横扫华尔街 股市“罗宾汉”劫贫济富？](/articles/dw/1044172.md)
 
 1-30 [只有中国能提供百万剂疫苗](/articles/dw/1044173.md)
-
-1-30 [台湾GDP增长30年来首超中国](/articles/dw/1044174.md)
 
