--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-16 [万那杜外海强震 规模6.2 – 法国国际广播电台 - RFI](/articles/rfi/1034652.md)
+
 2-16 [中国电影票房连三日破人民币10亿，农历春节和情人节相遇的好结果](/articles/rfi/1034653.md)
 
 2-16 [中国赠送的20万剂新冠疫苗抵达津巴布韦 - 法国世界报](/articles/rfi/1034654.md)
@@ -598,6 +600,4 @@
 2-10 [日官房长官加藤胜信:欢迎美军航母在南海军演](/articles/rfi/1034950.md)
 
 2-10 [美国务院：密切关注中印边境局势，会和友邦们站在一起](/articles/rfi/1034951.md)
-
-2-10 [科比坠机事故调查结果公布 “空间定向障碍”致飞行员迷失方向](/articles/rfi/1034952.md)
 
