--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-16 [顺水推舟｜我们再也不能给李文亮扫墓了](/articles/cdt/385893.md)
+
 2-15 [【麻辣总局】亲戚缺乏“边界意识” 年轻人当然不爱搭理](/articles/cdt/385895.md)
 
 2-15 [斯坦福大学SIO｜Clubhouse在中国：它的数据安全吗？](/articles/cdt/385896.md)
@@ -598,6 +600,4 @@
 1-15 [德国之声 | 12港人案律师卢思位吊照听证 多人遭警带走](/articles/cdt/387026.md)
 
 1-15 [卢思位律师：记父亲二三事](/articles/cdt/387027.md)
-
-1-15 [三联生活周刊｜我参加了芝加哥枪击案中国遇害留学生的追悼会](/articles/cdt/387032.md)
 
