--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-16 [中国查获假新冠疫苗近六万支 部分流向境外](/articles/rfa/1046401.md)
+
 2-16 [法国总统以农历新年取代中国新年 与其他亚洲国家交好](/articles/rfa/1046402.md)
 
 2-15 [Clubhouse资料恐被送中？ 专家：确实存在风险](/articles/rfa/1046403.md)
@@ -598,6 +600,4 @@
 1-14 [欧洲发起航天联盟  抵御美中竞争](/articles/rfa/1046699.md)
 
 1-14 [加拿大发布新规   禁止企业涉及新疆强迫劳动交易](/articles/rfa/1046700.md)
-
-1-14 [新冠再成“敏感词”    多地网民转发疫情遭处罚](/articles/rfa/1046701.md)
 
