--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-16 [被控非法集会 香港多位著名民主活动人士被正式提堂](/articles/voa/1042906.md)
+
 2-16 [世贸组织选出首位女性和首位非洲人担任总干事](/articles/voa/1042907.md)
 
 2-16 [“在中国办奥运是不道德的” 共和党众议员吁抵制北京冬奥](/articles/voa/1042908.md)
@@ -598,6 +600,4 @@
 2-4 [中国经济规模将超越美国? 学者：与美国争霸为时过早](/articles/voa/1043204.md)
 
 2-4 [英国产业抱怨脱欧利少弊多政府坚称会改善](/articles/voa/1043205.md)
-
-2-4 [拜登星期四发表讲话 为外交政策定调](/articles/voa/1043206.md)
 
