--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-16 [目以｜缅甸：只要民众不配合，独裁政府就难以运行](/articles/cdt/385882.md)
+
 2-16 [真实故事计划｜带着奶奶坐一趟飞机](/articles/cdt/385884.md)
 
 2-16 [网易有态度｜真实的农村是一片人性的荒漠](/articles/cdt/385885.md)
@@ -598,6 +600,4 @@
 1-16 [冰点周刊 | “转胎药”藏在互联网](/articles/cdt/387008.md)
 
 1-16 [FT | 拜登经济团队的中国政策](/articles/cdt/387011.md)
-
-1-16 [握手世界 | 轮椅上的小仙女重伤住进ICU，背后的原因竟是它](/articles/cdt/387022.md)
 
