--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-16 [“8·18流水集会”案开庭 黎智英等九人受审](/articles/dw/1043871.md)
+
 2-16 [慕尼黑安全会议主席: 欧洲被战火包围](/articles/dw/1043872.md)
 
 2-16 [中国驻加使馆:“反任意拘押“宣言“贼喊抓贼“](/articles/dw/1043873.md)
@@ -598,6 +600,4 @@
 1-30 [专访：拜登对中政策既坚定却也避免冲突升级](/articles/dw/1044169.md)
 
 1-30 [预防变种病毒入侵 德国实施入境限制](/articles/dw/1044170.md)
-
-1-30 [拜登上任后美中首次接触：或在新加坡](/articles/dw/1044171.md)
 
