--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-16 [中共四处收集基因数据 用DNA管控维族人遭诟病](/articles/voa/1042904.md)
+
 2-16 [律师：昂山素季被追加一项新指控](/articles/voa/1042905.md)
 
 2-16 [被控非法集会 香港多位著名民主活动人士被正式提堂](/articles/voa/1042906.md)
@@ -598,6 +600,4 @@
 2-4 [英国吊销中共央媒在英广播执照](/articles/voa/1043202.md)
 
 2-4 [前佛罗里达大学教授被控欺诈联邦赠款及隐瞒受中国政府支持背景](/articles/voa/1043203.md)
-
-2-4 [中国经济规模将超越美国? 学者：与美国争霸为时过早](/articles/voa/1043204.md)
 
