--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-16 [英首相呼吁世界大国制定大流行病条约以确保透明度](/articles/voa/1042903.md)
+
 2-16 [中共四处收集基因数据 用DNA管控维族人遭诟病](/articles/voa/1042904.md)
 
 2-16 [律师：昂山素季被追加一项新指控](/articles/voa/1042905.md)
@@ -598,6 +600,4 @@
 2-4 [国会研究报告:中国已是“地区霸权”并力争做“世界霸主”](/articles/voa/1043201.md)
 
 2-4 [英国吊销中共央媒在英广播执照](/articles/voa/1043202.md)
-
-2-4 [前佛罗里达大学教授被控欺诈联邦赠款及隐瞒受中国政府支持背景](/articles/voa/1043203.md)
 
