--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-16 [日知名女配音艺人自爆参拜靖国神社  中国小粉红喊打喊杀骂声不迭](/articles/rfa/1046399.md)
+
+2-16 [加拿大等58国发表反任意拘押宣言 学者分析此举针对中国](/articles/rfa/1046400.md)
+
 2-16 [中国查获假新冠疫苗近六万支 部分流向境外](/articles/rfa/1046401.md)
 
 2-16 [法国总统以农历新年取代中国新年 与其他亚洲国家交好](/articles/rfa/1046402.md)
@@ -596,8 +600,4 @@
 1-14 [台外长：台湾有助于印太和平稳定](/articles/rfa/1046697.md)
 
 1-14 [新疆政治犯张海涛狱中家书曝光   家属质疑内容失实](/articles/rfa/1046698.md)
-
-1-14 [欧洲发起航天联盟  抵御美中竞争](/articles/rfa/1046699.md)
-
-1-14 [加拿大发布新规   禁止企业涉及新疆强迫劳动交易](/articles/rfa/1046700.md)
 
