--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-17 [台湾出生的宇航员获选执行NASA2022年太空任务](/articles/voa/1042900.md)
+
+2-17 [缅甸当局秘密庭审昂山素季 大规模民众抗议继续](/articles/voa/1042901.md)
+
 2-16 [美联储官员：美国经济复苏动力强劲，可能会强于中国](/articles/voa/1042902.md)
 
 2-16 [英首相呼吁世界大国制定大流行病条约以确保透明度](/articles/voa/1042903.md)
@@ -596,8 +600,4 @@
 2-5 [英国展开研究两剂型疫苗可否混用不同疫苗](/articles/voa/1043198.md)
 
 2-4 [拜登和莫里森首次通话 强调美澳同盟力量](/articles/voa/1043199.md)
-
-2-4 [美导弹驱逐舰通过台湾海峡 拜登政府宣示对台承诺不变](/articles/voa/1043200.md)
-
-2-4 [国会研究报告:中国已是“地区霸权”并力争做“世界霸主”](/articles/voa/1043201.md)
 
