--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-17 [讨论：中国汉人了解的新疆是真实的新疆吗？](/articles/rfa/1046391.md)
+
+2-17 [天网黄琦年前与家人通话    狱中状况堪忧](/articles/rfa/1046392.md)
+
 2-17 [香港黎智英等九人开庭受审  两人认罪](/articles/rfa/1046393.md)
 
 2-17 [疫情十二月初已爆发？美中交锋世卫忙脱责](/articles/rfa/1046394.md)
@@ -596,8 +600,4 @@
 1-14 [无缘访台  美驻联大使与蔡英文视频会谈](/articles/rfa/1046689.md)
 
 1-14 [和台湾三十年老交情 ！坎贝尔出任白宫印太事务协调官](/articles/rfa/1046690.md)
-
-1-14 [中国新冠疫情急转直下    黑省近四千万人居家隔离](/articles/rfa/1046691.md)
-
-1-14 [港警继续大抓捕     国安拘捕11人涉嫌“协助罪犯”](/articles/rfa/1046692.md)
 
