--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-17 [美专家：中国国家资本主义威胁全球市场](/articles/rfa/1046390.md)
+
 2-17 [讨论：中国汉人了解的新疆是真实的新疆吗？](/articles/rfa/1046391.md)
 
 2-17 [天网黄琦年前与家人通话    狱中状况堪忧](/articles/rfa/1046392.md)
@@ -598,6 +600,4 @@
 1-14 [世卫专家团抵达武汉   病毒溯源调查能否独立引质疑](/articles/rfa/1046688.md)
 
 1-14 [无缘访台  美驻联大使与蔡英文视频会谈](/articles/rfa/1046689.md)
-
-1-14 [和台湾三十年老交情 ！坎贝尔出任白宫印太事务协调官](/articles/rfa/1046690.md)
 
