--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,24 @@
 美国之音
 ------
 
+2-17 [共和党组织申斥投票支持将特朗普定罪的本党议员](/articles/voa/1042881.md)
+
+2-17 [卫生专家呼吁公平分配全球疫苗](/articles/voa/1042882.md)
+
+2-17 [白宫要义: 拜登总统第一位通话的中东领导人将会是内塔尼亚胡](/articles/voa/1042883.md)
+
+2-17 [秘鲁启动新冠疫苗计划 同时调查官员提前接种丑闻](/articles/voa/1042884.md)
+
+2-17 [向海外媒体提供信息的西藏导游在狱中死亡 人权组织呼吁调查](/articles/voa/1042885.md)
+
+2-17 [北约国防部长会议将就中俄威胁进行广泛讨论](/articles/voa/1042886.md)
+
+2-17 [美国呼吁中国明确表态谴责缅甸政变](/articles/voa/1042887.md)
+
+2-17 [弹劾审判虽落幕 特朗普动向、党派分歧更受关注](/articles/voa/1042888.md)
+
+2-17 [TikTok在美广告业务迅速回升，但在欧洲遭消费者组织投诉](/articles/voa/1042889.md)
+
 2-17 [大选争议尘埃落定？美最高法院周五决定是否受理相关诉讼](/articles/voa/1042890.md)
 
 2-17 [缅甸被推翻的领导人昂山素季面临新的指控](/articles/voa/1042891.md)
@@ -582,22 +600,4 @@
 2-5 [众议院民主党人要求特朗普在弹劾审判中作证 特朗普予以拒绝](/articles/voa/1043179.md)
 
 2-5 [北京干预后 圭亚那突然终止设立台湾办公室的协议](/articles/voa/1043180.md)
-
-2-5 [《更长电报》剑指习近平 美国对华战略建言引发左右激辩](/articles/voa/1043181.md)
-
-2-5 [VOA连线(文灏): 谣言和阴谋论为何充斥中文信息圈?](/articles/voa/1043182.md)
-
-2-5 [共和党党内团结面临挑战](/articles/voa/1043183.md)
-
-2-5 [白宫要义: 白宫国安顾问沙利文: 国安会将从各方面来对付中国](/articles/voa/1043184.md)
-
-2-5 [VOA连线(张蓉湘): 美国总统拜登国务院发表重大外交政策演说](/articles/voa/1043185.md)
-
-2-5 [缅甸驻美外交官要求避难](/articles/voa/1043186.md)
-
-2-5 [专家：拜登演说确立对华政策“既竞争亦合作”](/articles/voa/1043187.md)
-
-2-5 [人民币数字化 专家警告：小心政府监控每笔交易](/articles/voa/1043188.md)
-
-2-5 [三名中国人在尼日利亚金矿纠纷中被绑架](/articles/voa/1043189.md)
 
