--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-17 [争取联盟对抗中国 拜登本周迎来G7首秀](/articles/voa/1042880.md)
+
 2-17 [共和党组织申斥投票支持将特朗普定罪的本党议员](/articles/voa/1042881.md)
 
 2-17 [卫生专家呼吁公平分配全球疫苗](/articles/voa/1042882.md)
@@ -598,6 +600,4 @@
 2-5 [2020年凶杀案激增 2021年如何防范悲剧重演](/articles/voa/1043178.md)
 
 2-5 [众议院民主党人要求特朗普在弹劾审判中作证 特朗普予以拒绝](/articles/voa/1043179.md)
-
-2-5 [北京干预后 圭亚那突然终止设立台湾办公室的协议](/articles/voa/1043180.md)
 
