--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-17 [为吸引中国交易者，莫斯科交易所将把开盘时间提前](/articles/ft/1046053.md)
+
 2-17 [应该趁疫情读一个MBA吗？](/articles/ft/1046054.md)
 
 2-16 [上海餐饮业的女性，难在哪？](/articles/ft/1046055.md)
@@ -598,6 +600,4 @@
 1-7 [德国思考“后默克尔时代”对华政策](/articles/ft/1046351.md)
 
 1-7 [展望2021：新十年的开始](/articles/ft/1046352.md)
-
-1-7 [共和党参议员拒绝认证大选结果引发商界反弹](/articles/ft/1046353.md)
 
