--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-17 [中国金融市场因假期关系休市 – 法国国际广播电台 - RFI](/articles/rfi/1034589.md)
+
 2-17 [反政变抗议者将再上街 联合国忧缅甸暴力冲突升温 – 法国国际广播电台 - RFI](/articles/rfi/1034590.md)
 
 2-17 [市场观望 美股涨跌互见 – 法国国际广播电台 - RFI](/articles/rfi/1034591.md)
@@ -598,6 +600,4 @@
 2-12 [于文生获马丁恩纳尔斯奖](/articles/rfi/1034887.md)
 
 2-12 [中国宣布禁止BBC世界新闻台在华继续落地 BBC表遗憾](/articles/rfi/1034888.md)
-
-2-12 [欧洲理事会主席米歇尔呼吁与拜登政府协商对华政策](/articles/rfi/1034889.md)
 
