--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 2-17 [中外艺术 | 那年，武汉的春节：100张照片背后的惨痛](/articles/cdt/385876.md)
 
+2-17 [【CDT敏感词周报】第十二期：春晚、武汉花市、缅甸GFW](/articles/cdt/385879.md)
+
 2-16 [目以｜缅甸：只要民众不配合，独裁政府就难以运行](/articles/cdt/385882.md)
 
 2-16 [真实故事计划｜带着奶奶坐一趟飞机](/articles/cdt/385884.md)
@@ -598,6 +600,4 @@
 1-16 [三三星球 | 如何一句话毁掉中国女性？](/articles/cdt/387002.md)
 
 1-16 [真实故事计划 | 一个作家的卖血式写作](/articles/cdt/387003.md)
-
-1-16 [回声 | 何谦和她的朋友们：“以身试法”的性暴力幸存者](/articles/cdt/387006.md)
 
