--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-17 [拜登：中国将会为其践踏人权行为承担后果](/articles/voa/1042876.md)
+
 2-17 [新冠病毒成为2020旅游业杀手](/articles/voa/1042877.md)
 
 2-17 [拜登出访美国腹地争取选民支持经济救助计划](/articles/voa/1042878.md)
@@ -598,6 +600,4 @@
 2-5 [参院外交委员会通过美常驻联合国代表的提名](/articles/voa/1043174.md)
 
 2-5 [加拿大期待与拜登政府合作：释放两名麦克，共同应对中国挑战](/articles/voa/1043175.md)
-
-2-5 [澳大利亚呼吁联合国对中国在新疆侵犯人权的指控展开调查](/articles/voa/1043176.md)
 
