--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-17 [缅甸政局动荡不安 外国居民面临去离抉择](/articles/dw/1043855.md)
+
+2-17 [抵制北京冬奥行动发酵 外交官：等美国带头](/articles/dw/1043856.md)
+
 2-17 [面对中俄挑战 北约推动变革](/articles/dw/1043857.md)
 
 2-17 [国际社会持续施压  缅军止不住抗议浪潮](/articles/dw/1043858.md)
@@ -596,8 +600,4 @@
 1-31 [新冠疫情之下 民主压力不小](/articles/dw/1044153.md)
 
 1-31 [报告：人工智能 美国遥遥领先 中国正在追赶](/articles/dw/1044154.md)
-
-1-31 [欧盟的希望：挪威发现稀有矿产](/articles/dw/1044155.md)
-
-1-31 [2021年有哪些值得期待的太空大事？](/articles/dw/1044156.md)
 
