--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-17 [人生研究所｜看过这档停播的《谭谈交通》，今年所有春晚小品都得认输](/articles/cdt/385860.md)
+
 2-17 [全现在 | 中国版《熔炉》揭发人何思云：因报警失去教职，远走他乡仍沒有安全感](/articles/cdt/385875.md)
 
 2-17 [中外艺术 | 那年，武汉的春节：100张照片背后的惨痛](/articles/cdt/385876.md)
@@ -598,6 +600,4 @@
 1-16 [Matters | “我还不是到处说！” 律师尚满庆的封城时光](/articles/cdt/387001.md)
 
 1-16 [三三星球 | 如何一句话毁掉中国女性？](/articles/cdt/387002.md)
-
-1-16 [真实故事计划 | 一个作家的卖血式写作](/articles/cdt/387003.md)
 
