--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-17 [茅台酒调教师入围中国工程院院士候选人](/articles/rfa/1046388.md)
+
 2-17 [地方政府紧跟中央  	天津下令全体党员观看抗美剧](/articles/rfa/1046389.md)
 
 2-17 [美专家：中国国家资本主义威胁全球市场](/articles/rfa/1046390.md)
@@ -598,6 +600,4 @@
 1-15 [孟晚舟丈夫孩子入境团聚   两加拿大人在华仍无探访权](/articles/rfa/1046686.md)
 
 1-14 [澳大利亚再以国安为由  拒绝中国国企并购申请](/articles/rfa/1046687.md)
-
-1-14 [世卫专家团抵达武汉   病毒溯源调查能否独立引质疑](/articles/rfa/1046688.md)
 
