--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-17 [拜登：中国将会为践踏人权的行为付出代价](/articles/dw/1043850.md)
+
+2-17 [人们追问“去哪里了”？ 金正恩夫人现身了](/articles/dw/1043851.md)
+
+2-17 [全球抗议运动的标志和象征](/articles/dw/1043852.md)
+
 2-17 [蚂蚁IPO遭停内幕：对习近平造成潜在挑战的政商权贵们](/articles/dw/1043853.md)
 
 2-17 [客座评论：中国很可能是缅甸局势恶化的输家](/articles/dw/1043854.md)
@@ -594,10 +600,4 @@
 1-31 [拉丁美洲抗击新冠奇闻”疫”事](/articles/dw/1044148.md)
 
 1-31 [“新冠监狱”：强制隔离措施在德国饱受争议](/articles/dw/1044149.md)
-
-1-31 [新专员 新政策：转向亚洲、而非转向中国](/articles/dw/1044150.md)
-
-1-31 [香港大抓捕：对自由的进一步侵蚀？](/articles/dw/1044151.md)
-
-1-31 [透明国际组织批评政党献金和利益游说](/articles/dw/1044152.md)
 
