--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-17 [卫星图片显示中国军队撤离中印军事对峙地区](/articles/dw/1043846.md)
+
 2-17 [疑似中国施压 台湾与BioNTech疫苗交易搁浅](/articles/dw/1043847.md)
 
 2-17 [为什么以色列在全球范围内疫苗施打速度最快？](/articles/dw/1043848.md)
@@ -598,6 +600,4 @@
 1-31 [新政生效 BNO港人即日起可申请英国居留签证](/articles/dw/1044144.md)
 
 1-31 [声援反对派 数百名俄罗斯示威民众被拘](/articles/dw/1044145.md)
-
-1-31 [拉丁美洲抗击新冠奇闻“疫”事](/articles/dw/1044146.md)
 
