--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-17 [缅甸仰光周三爆发迄今最大规模抗议 反对军方推翻文官政府](/articles/voa/1042872.md)
+
 2-17 [中国加强稀土管制有何盘算？](/articles/voa/1042873.md)
 
 2-17 [去年新生儿同比大跌15% 中国恐“未富先老”](/articles/voa/1042874.md)
@@ -598,6 +600,4 @@
 2-5 [中英争执激化 中国官员网民向BBC开火泄愤](/articles/voa/1043170.md)
 
 2-5 [马克龙：欧盟不应该和美国结伙对付中国](/articles/voa/1043171.md)
-
-2-5 [郭飞雄妻子张青致信联合国人权官员求救 接受VOA专访: 盼夫来美团聚](/articles/voa/1043172.md)
 
