--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-18 [调查：若被迫在美中之间选边站 多数东南亚人选择美国](/articles/voa/1042870.md)
+
+2-17 [印中军队从对峙地区后撤，印度对中国投资项目似有松动](/articles/voa/1042871.md)
+
 2-17 [缅甸仰光周三爆发迄今最大规模抗议 反对军方推翻文官政府](/articles/voa/1042872.md)
 
 2-17 [中国加强稀土管制有何盘算？](/articles/voa/1042873.md)
@@ -596,8 +600,4 @@
 2-5 [拜登亮明立场：美战舰继续在南中国海自由航行](/articles/voa/1043168.md)
 
 2-5 [华为公主姚安娜出道被群嘲 专家：源于疫情下的“相对剥夺感”](/articles/voa/1043169.md)
-
-2-5 [中英争执激化 中国官员网民向BBC开火泄愤](/articles/voa/1043170.md)
-
-2-5 [马克龙：欧盟不应该和美国结伙对付中国](/articles/voa/1043171.md)
 
