--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-18 [时事大家谈: 习近平重手整肃政法系，打响20大权力保卫战？](/articles/voa/1042863.md)
+
 2-18 [俄欧外交危机 莫斯科频发威胁想达哪些目的？](/articles/voa/1042864.md)
 
 2-18 [美众院共和党人呼吁拜登采纳特朗普的孔子学院限制令](/articles/voa/1042865.md)
@@ -598,6 +600,4 @@
 2-6 [中国再发留学警告给澳大利亚施压](/articles/voa/1043161.md)
 
 2-6 [美国气候特使克里：将与中国特使解振华对话](/articles/voa/1043162.md)
-
-2-6 [美台企业座谈会正式举办 与会业者呼吁双方加入CPTPP](/articles/voa/1043163.md)
 
