--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-18 [学者：没有美国的技术 中国飞机制造业需重新开始](/articles/rfa/1046380.md)
+
+2-18 [华为启动“南泥湾”计划自救  做手机的要去养猪](/articles/rfa/1046381.md)
+
+2-18 [缅甸网民质疑中国介入缅甸政局   驻缅大使忙撇清](/articles/rfa/1046382.md)
+
 2-18 [匈牙利成首用中国疫苗的欧盟国家 欧盟将推第二代疫苗计画因应病毒变异](/articles/rfa/1046383.md)
 
 2-18 [北京小汤山强拆后续：街头露宿母子镇政府门前遇袭](/articles/rfa/1046384.md)
@@ -594,10 +600,4 @@
 1-15 [冀黑两省病例居高不下   上海民众接种国产疫苗后多日不适](/articles/rfa/1046678.md)
 
 1-15 [美国智库潜在冲突风险报告 台湾升级为最高等级](/articles/rfa/1046679.md)
-
-1-15 [美国禁新疆强迫劳动力生产的棉花及番茄制品](/articles/rfa/1046680.md)
-
-1-15 [华为软件可识别维吾尔人   信息传至政府](/articles/rfa/1046681.md)
-
-1-15 [国际组织揭露中国宗教迫害：监控技术扩散与大量关闭教堂](/articles/rfa/1046682.md)
 
