--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-18 [日本不排除在尖阁诸岛使用武器](/articles/voa/1042861.md)
+
+2-18 [美国司法部起诉三名朝鲜黑客涉窃逾13亿美元现金及加密货币](/articles/voa/1042862.md)
+
 2-18 [时事大家谈: 习近平重手整肃政法系，打响20大权力保卫战？](/articles/voa/1042863.md)
 
 2-18 [俄欧外交危机 莫斯科频发威胁想达哪些目的？](/articles/voa/1042864.md)
@@ -596,8 +600,4 @@
 2-6 [俄罗斯驱逐参加声援纳瓦尔尼集会的西方外交官](/articles/voa/1043159.md)
 
 2-6 [香港教协忧改动通识科成变相国民教育 学生反对禁绝任何反对中国意见](/articles/voa/1043160.md)
-
-2-6 [中国再发留学警告给澳大利亚施压](/articles/voa/1043161.md)
-
-2-6 [美国气候特使克里：将与中国特使解振华对话](/articles/voa/1043162.md)
 
