--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-18 [世界灯火归来 | 茅台总工程师入围院士候选人：科技性不高侮辱性极强！](/articles/cdt/385848.md)
+
 2-17 [极昼工作室｜「两头婚」的春节，没有硝烟的性别战争无处不在](/articles/cdt/385852.md)
 
 2-17 [维舟｜为什么现在的中国还有这样的人](/articles/cdt/385853.md)
@@ -598,6 +600,4 @@
 1-17 [【CDT连载】巴奴的救赎（25）](/articles/cdt/386981.md)
 
 1-17 [北青深一度 | 自焚的外卖骑手：12月跳槽，工资被扣5000元，多次讨要未果](/articles/cdt/386986.md)
-
-1-17 [【网络民议】河北籍非新冠患者在北京遭拒收](/articles/cdt/386988.md)
 
