--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-18 [台海战争风险增 观察人士：拜登须防习近平对台出手](/articles/voa/1042851.md)
+
+2-18 [美国商会：与中国全面脱钩是损招儿，针对性脱钩才是正招儿](/articles/voa/1042852.md)
+
 2-18 [脸书独立监委会权责备受质疑](/articles/voa/1042853.md)
 
 2-18 [白宫要义: 白宫重申拜习通话及与中国接触时持续提出人权议题](/articles/voa/1042854.md)
@@ -596,8 +600,4 @@
 2-6 [获美支持后 前尼日利亚财长有望成为世贸组织首位女性领导人](/articles/voa/1043149.md)
 
 2-6 [台湾在圭亚那设处生变 ，美中竞逐拉美影响力见胜负？](/articles/voa/1043150.md)
-
-2-6 [州众院表决通过后 弗吉尼亚废除死刑几成定局](/articles/voa/1043151.md)
-
-2-6 [华为问题立场受质疑 美国会共和党人暂缓商务部长人选确认程序](/articles/voa/1043152.md)
 
