--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-18 [不理北京警告 拜登延续四国联盟](/articles/rfi/1034520.md)
+
+2-18 [与BionTech疫苗交易被推延 台湾间接指中国施压](/articles/rfi/1034521.md)
+
+2-18 [法国重症新冠肺炎病人有可能享受职业病待遇 ？ - 法国世界报](/articles/rfi/1034522.md)
+
 2-18 [最严返乡令冲击 中国春运运量跌破1亿人次大关](/articles/rfi/1034523.md)
 
 2-18 [美国将于月底前向世卫组织支付 2亿多美元](/articles/rfi/1034524.md)
@@ -594,10 +600,4 @@
 2-13 [华尔街日报称中国拒绝为世卫调查团提供未经处理的数据](/articles/rfi/1034818.md)
 
 2-13 [塞尔维亚中俄欧三管齐下疫苗推进迅速 拿到俄疫苗首个生产许可](/articles/rfi/1034819.md)
-
-2-13 [彭博社：中国通过科技供应商收集情报成为全球供应链广泛风险](/articles/rfi/1034820.md)
-
-2-13 [世卫：仍不排除新冠起源的所有可能性](/articles/rfi/1034821.md)
-
-2-13 [因欧洲跨境电视协议CGTN面临在整片欧陆掉线](/articles/rfi/1034822.md)
 
