--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-18 [抗击新冠疫情 美新政府与北京合作的第一张考卷](/articles/dw/1043835.md)
+
+2-18 [缅甸政变：「Z世代」挑战军政府](/articles/dw/1043836.md)
+
 2-18 [BioNTech: 与台湾仍在谈判疫苗供货](/articles/dw/1043837.md)
 
 2-17 [英国变种病毒在德国加速扩散](/articles/dw/1043838.md)
@@ -596,8 +600,4 @@
 2-1 [台湾首次通报美侦察机进入其防空识别区](/articles/dw/1044133.md)
 
 2-1 [为一线医护筹捐数千万  百岁老兵染疫入院](/articles/dw/1044134.md)
-
-2-1 [世卫查访湖北疾控中心 记者报导受阻](/articles/dw/1044135.md)
-
-2-1 [北京忧春节疫情失控 世卫小组访湖北疾控中心](/articles/dw/1044136.md)
 
