--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-18 [爱沙尼亚情报部门警告当心“北京主导的被静音世界“ 中国要求修改报告但被拒绝](/articles/voa/1042848.md)
+
+2-18 [美国偶像级保守派电台名嘴因癌症逝世](/articles/voa/1042849.md)
+
 2-18 [前总统特朗普面临更多指控](/articles/voa/1042850.md)
 
 2-18 [台海战争风险增 观察人士：拜登须防习近平对台出手](/articles/voa/1042851.md)
@@ -596,8 +600,4 @@
 2-6 [国务卿布林肯就新疆、香港和缅甸等问题对北京施压](/articles/voa/1043146.md)
 
 2-6 [美司令警告与中俄的“可能”核冲突，呼吁构建新威慑战略](/articles/voa/1043147.md)
-
-2-6 [鲁比奥参议员谴责中共在香港实施教育改革](/articles/voa/1043148.md)
-
-2-6 [获美支持后 前尼日利亚财长有望成为世贸组织首位女性领导人](/articles/voa/1043149.md)
 
