--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,14 @@
 金融时报
 ------
 
+2-18 [拜登与以色列总理内塔尼亚胡通电话](/articles/ft/1046045.md)
+
+2-18 [美国指控三名朝鲜程序员通过黑客行动窃取13亿美元](/articles/ft/1046046.md)
+
+2-18 [日本岛根县知事呼吁取消今年东京奥运会](/articles/ft/1046047.md)
+
+2-18 [逆势之下，中国FDI何以跃居世界第一?](/articles/ft/1046048.md)
+
 2-18 [华人社会为何对2020年美国大选存在诸多认知误区？](/articles/ft/1046049.md)
 
 2-18 [美国政治泡沫与疫情下，中企对美直接投资应开辟新机会](/articles/ft/1046050.md)
@@ -592,12 +600,4 @@
 1-7 [未成年出国是“万能钥匙”吗？](/articles/ft/1046343.md)
 
 1-7 [从宪政看美国大选（下）](/articles/ft/1046344.md)
-
-1-7 [每周时事分析：拜登身边有真正的中国问题专家吗？](/articles/ft/1046345.md)
-
-1-7 [Facebook、Twitter暂时冻结特朗普账号](/articles/ft/1046346.md)
-
-1-7 [美国国会暴力事件震惊西方民主国家](/articles/ft/1046347.md)
-
-1-7 [美国国会将重新开会认证拜登胜选](/articles/ft/1046348.md)
 
