--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-18 [拜登提高接收难民上限 重新安置仍需时日](/articles/voa/1042846.md)
+
+2-18 [恢复软实力：国会新领导人寻求拓展美国外交](/articles/voa/1042847.md)
+
 2-18 [爱沙尼亚情报部门警告当心“北京主导的被静音世界“ 中国要求修改报告但被拒绝](/articles/voa/1042848.md)
 
 2-18 [美国偶像级保守派电台名嘴因癌症逝世](/articles/voa/1042849.md)
@@ -596,8 +600,4 @@
 2-6 [报告：亲中视频宣传网络利用冲击国会事件唱衰美国](/articles/voa/1043144.md)
 
 2-6 [英国悄然驱逐3名记者身份中国间谍](/articles/voa/1043145.md)
-
-2-6 [国务卿布林肯就新疆、香港和缅甸等问题对北京施压](/articles/voa/1043146.md)
-
-2-6 [美司令警告与中俄的“可能”核冲突，呼吁构建新威慑战略](/articles/voa/1043147.md)
 
