--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-18 [印度女记者被免除诽谤罪 提振印度#MeToo运动](/articles/ft/1046044.md)
+
 2-18 [拜登与以色列总理内塔尼亚胡通电话](/articles/ft/1046045.md)
 
 2-18 [美国指控三名朝鲜程序员通过黑客行动窃取13亿美元](/articles/ft/1046046.md)
@@ -598,6 +600,4 @@
 1-7 [美国国会暴力事件和鼓吹“特朗普未输论”的危险](/articles/ft/1046342.md)
 
 1-7 [未成年出国是“万能钥匙”吗？](/articles/ft/1046343.md)
-
-1-7 [从宪政看美国大选（下）](/articles/ft/1046344.md)
 
