--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-18 [向英国人讲好中国故事之前，先明白中英文化差异](/articles/ft/1046043.md)
+
 2-18 [印度女记者被免除诽谤罪 提振印度#MeToo运动](/articles/ft/1046044.md)
 
 2-18 [拜登与以色列总理内塔尼亚胡通电话](/articles/ft/1046045.md)
@@ -598,6 +600,4 @@
 1-7 [南非新冠病毒变体可能影响疫苗有效性](/articles/ft/1046341.md)
 
 1-7 [美国国会暴力事件和鼓吹“特朗普未输论”的危险](/articles/ft/1046342.md)
-
-1-7 [未成年出国是“万能钥匙”吗？](/articles/ft/1046343.md)
 
