--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -583,6 +583,8 @@
 
 1-18 [思聪的南方纪事｜一审判决都没生效，就有人开始投诉删文章了](/articles/cdt/386952.md)
 
+2-18 [【CDT档案】举国致之，举国治之：中共刚性体制与新冠疫情之祸](/articles/cdt/386957.md)
+
 1-18 [【异闻观止】法制周末 | 河南济源市委书记张战伟被举报掌掴政府秘书长，原因是秘书长进市领导食堂吃早餐！](/articles/cdt/386958.md)
 
 1-18 [BBC | 华为专利提及可识别维吾尔人技术](/articles/cdt/386960.md)
@@ -598,6 +600,4 @@
 1-17 [六神磊磊读金庸 | 田伯光都阉了，张云龙四年半是怎么回事？](/articles/cdt/386972.md)
 
 1-17 [维舟 | 河北：“大局意识”之苦](/articles/cdt/386975.md)
-
-1-18 [【中国哭墙】茫茫人海，容得下一国一家，却难容一颗疲倦的心灵（1月9-17日，2021年）](/articles/cdt/386978.md)
 
