--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-18 [国民党主席江启臣 获选《时代》杂志次世代领导人](/articles/rfa/1046372.md)
+
+2-18 [开展新一轮造神运动   央媒合制 “平语近人”](/articles/rfa/1046373.md)
+
 2-18 [中国军工企业成缅甸军方重要合作伙伴](/articles/rfa/1046374.md)
 
 2-18 [美专家吁美日台建联合司令部抵御大陆攻击](/articles/rfa/1046375.md)
@@ -596,8 +600,4 @@
 1-16 [拜登对华政策主管：美中关系要可预期、稳定和清晰](/articles/rfa/1046670.md)
 
 1-16 [习近平回信星巴克老板向美国示好  为时已晚？](/articles/rfa/1046671.md)
-
-1-16 [欧中投资协定文本将在下周公布](/articles/rfa/1046672.md)
-
-1-16 [波兰法院裁定：不引渡法轮功学员李志辉到中国受审](/articles/rfa/1046673.md)
 
