--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-18 [WHO调查团队成员：我亲历的武汉病毒溯源调查](/articles/nyt/1047178.md)
+
 2-18 [拜登政府制定对华政策面临巨大挑战](/articles/nyt/1047179.md)
 
 2-18 [中国压制穆斯林行动延伸至三亚](/articles/nyt/1047180.md)
@@ -598,6 +600,4 @@
 12-4 [“我们被诱骗去自杀”：一名原日本神风特攻队员的自述](/articles/nyt/1047476.md)
 
 12-4 [简报：美国限制中共党员旅行签证；美国提高入籍考试难度](/articles/nyt/1047477.md)
-
-12-3 [对话拜登：优先投资美国，谨慎制衡中国](/articles/nyt/1047478.md)
 
