--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-18 [“反美”教授陈平得州安家 遭嘲反美是工作 赴美是生活](/articles/rfa/1046371.md)
+
 2-18 [国民党主席江启臣 获选《时代》杂志次世代领导人](/articles/rfa/1046372.md)
 
 2-18 [开展新一轮造神运动   央媒合制 “平语近人”](/articles/rfa/1046373.md)
@@ -598,6 +600,4 @@
 1-16 [美国会中国人权报告: 中国在新疆实施“种族灭绝”](/articles/rfa/1046669.md)
 
 1-16 [拜登对华政策主管：美中关系要可预期、稳定和清晰](/articles/rfa/1046670.md)
-
-1-16 [习近平回信星巴克老板向美国示好  为时已晚？](/articles/rfa/1046671.md)
 
