--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-18 [陈时中：台湾购买疫苗一度受阻 疑与政治介入有关](/articles/voa/1042837.md)
+
 2-18 [缅甸不服从运动扩大，铁路罢工，政府机构瘫痪](/articles/voa/1042838.md)
 
 2-18 [Clubhouse在中国的被墙与后续](/articles/voa/1042839.md)
@@ -598,6 +600,4 @@
 2-7 [伊朗：制裁若不放松，核协议将更加危险](/articles/voa/1043135.md)
 
 2-7 [缅甸军方开始逮捕外籍人员](/articles/voa/1043136.md)
-
-2-7 [李文亮周年日：官方沉默，民众怀念](/articles/voa/1043137.md)
 
