--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-19 [Covid-19:欧盟启动加快疫苗接种计划](/articles/rfi/1034474.md)
+
+2-19 [蓬佩奥政策遗产，美台官员在普罗旺斯会见](/articles/rfi/1034475.md)
+
 2-19 [美日印澳外长将至少每年一会 布林肯 ：期待推进自由开放的印太愿景](/articles/rfi/1034476.md)
 
 2-19 [英加宣布制裁缅甸多名军头 为军事政变和侵犯人权负责](/articles/rfi/1034477.md)
@@ -596,8 +600,4 @@
 2-14 [世卫调查团长：我们要更多数据](/articles/rfi/1034772.md)
 
 2-14 [缅甸军人继续施压抓捕反政变抗议者](/articles/rfi/1034773.md)
-
-2-14 [法国建议Covid已感染者只打一剂疫苗](/articles/rfi/1034774.md)
-
-2-13 [世卫调查组员透露：中国拒绝向世卫组织团队提供早期新冠病例的原始数据](/articles/rfi/1034775.md)
 
