--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-19 [罗冠聪：中共的目标就是权力 民主国家须联合应对](/articles/voa/1042828.md)
+
+2-19 [黎智英申请保释前夕狱中再次被捕 加控涉嫌协助12港人偷渡台湾](/articles/voa/1042829.md)
+
+2-19 [多个非政府组织联名致信拜登总统 敦促将中国人权纳入美中政策优先考虑](/articles/voa/1042830.md)
+
 2-19 [台湾采购近2000万剂新冠疫苗，中国疫苗不在其中](/articles/voa/1042831.md)
 
 2-19 [香港正式批准科兴新冠疫苗在香港紧急使用](/articles/voa/1042832.md)
@@ -594,10 +600,4 @@
 2-8 [中国“疫苗外交”被指宣传自我 诋毁他国](/articles/voa/1043126.md)
 
 2-8 [缅甸星期天网络似部分恢复 有抗议者被橡胶子弹射伤](/articles/voa/1043127.md)
-
-2-7 [丁家喜许志永更多惊人酷刑曝光 李翘楚为许志永呐喊遭拘留](/articles/voa/1043128.md)
-
-2-7 [霍梅尼：重返伊核协议的条件是美国解除对伊制裁](/articles/voa/1043129.md)
-
-2-7 [拜登或更同情受迫害者，寻求庇护者的好消息](/articles/voa/1043130.md)
 
