--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-19 [小威澳网含泪止步4强  无缘追平24座大满贯后冠纪录 – 法国国际广播电台 - RFI](/articles/rfi/1034472.md)
+
+2-19 [美国五角大厦：约1/3美军拒绝接种COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1034473.md)
+
 2-19 [Covid-19:欧盟启动加快疫苗接种计划](/articles/rfi/1034474.md)
 
 2-19 [蓬佩奥政策遗产，美台官员在普罗旺斯会见](/articles/rfi/1034475.md)
@@ -596,8 +600,4 @@
 2-14 [美国新总统拜登告别特朗普避难政策](/articles/rfi/1034770.md)
 
 2-14 [美国敦促为理解新冠大流行并为下一场做好准备，中国必须给出最早期数据](/articles/rfi/1034771.md)
-
-2-14 [世卫调查团长：我们要更多数据](/articles/rfi/1034772.md)
-
-2-14 [缅甸军人继续施压抓捕反政变抗议者](/articles/rfi/1034773.md)
 
