--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-19 [Perseverance：美国毅力号火星探测器](/articles/rfi/1034471.md)
+
 2-19 [小威澳网含泪止步4强  无缘追平24座大满贯后冠纪录 – 法国国际广播电台 - RFI](/articles/rfi/1034472.md)
 
 2-19 [美国五角大厦：约1/3美军拒绝接种COVID-19疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1034473.md)
@@ -598,6 +600,4 @@
 2-14 [日本福岛东部海域爆发7.3级地震](/articles/rfi/1034769.md)
 
 2-14 [美国新总统拜登告别特朗普避难政策](/articles/rfi/1034770.md)
-
-2-14 [美国敦促为理解新冠大流行并为下一场做好准备，中国必须给出最早期数据](/articles/rfi/1034771.md)
 
