--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-19 [美国多数地区面临严寒的暴风雪天气](/articles/voa/1042826.md)
+
+2-19 [时事大家谈: 美加联手推反任意拘押外国人宣言能否让北京就范？](/articles/voa/1042827.md)
+
 2-19 [罗冠聪：中共的目标就是权力 民主国家须联合应对](/articles/voa/1042828.md)
 
 2-19 [黎智英申请保释前夕狱中再次被捕 加控涉嫌协助12港人偷渡台湾](/articles/voa/1042829.md)
@@ -596,8 +600,4 @@
 2-8 [喜马拉雅山冰川断裂后，印度北部多人丧生](/articles/voa/1043124.md)
 
 2-8 [香港网络电台主持人杰斯因涉嫌“煽动”遭拘捕](/articles/voa/1043125.md)
-
-2-8 [中国“疫苗外交”被指宣传自我 诋毁他国](/articles/voa/1043126.md)
-
-2-8 [缅甸星期天网络似部分恢复 有抗议者被橡胶子弹射伤](/articles/voa/1043127.md)
 
