--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-19 [共和党参众议员再次推出《防止台湾遭侵略法》](/articles/voa/1042823.md)
+
+2-19 [美法德英外长同意密切协调应对中国带来的全球挑战](/articles/voa/1042824.md)
+
+2-19 [众院重提两党议案，禁止新疆奴役产品进口](/articles/voa/1042825.md)
+
 2-19 [美国多数地区面临严寒的暴风雪天气](/articles/voa/1042826.md)
 
 2-19 [时事大家谈: 美加联手推反任意拘押外国人宣言能否让北京就范？](/articles/voa/1042827.md)
@@ -594,10 +600,4 @@
 2-8 [美国财政部长：如果没有救助协议，美国经济复苏需要数年时间](/articles/voa/1043121.md)
 
 2-8 [拜登说习近平骨子里就没有民主](/articles/voa/1043122.md)
-
-2-8 [拜登：美国不会解除对伊朗的制裁](/articles/voa/1043123.md)
-
-2-8 [喜马拉雅山冰川断裂后，印度北部多人丧生](/articles/voa/1043124.md)
-
-2-8 [香港网络电台主持人杰斯因涉嫌“煽动”遭拘捕](/articles/voa/1043125.md)
 
