--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-19 [美国宇航局“毅力号”探测器成功登陆火星](/articles/voa/1042822.md)
+
 2-19 [共和党参众议员再次推出《防止台湾遭侵略法》](/articles/voa/1042823.md)
 
 2-19 [美法德英外长同意密切协调应对中国带来的全球挑战](/articles/voa/1042824.md)
@@ -598,6 +600,4 @@
 2-8 [亲子组合隔离四重奏成全球网红](/articles/voa/1043120.md)
 
 2-8 [美国财政部长：如果没有救助协议，美国经济复苏需要数年时间](/articles/voa/1043121.md)
-
-2-8 [拜登说习近平骨子里就没有民主](/articles/voa/1043122.md)
 
