--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-19 [深圳二手房价全国居首  推手是谁？](/articles/rfa/1046363.md)
+
+2-19 [韩国前外交官：夹在美中之间的韩国应向美靠拢](/articles/rfa/1046364.md)
+
 2-19 [宗教“中国化”抵达海南 穆斯林受打压](/articles/rfa/1046365.md)
 
 2-19 [法学家发起网络公投: 国民制宪  和平转型](/articles/rfa/1046366.md)
@@ -596,8 +600,4 @@
 1-19 [台湾文学基地落成 文化部长：中国作家在台出书无禁忌](/articles/rfa/1046661.md)
 
 1-18 [养老金因坐牢化为乌有 北京家庭教会长老徐永海誓讨公道](/articles/rfa/1046662.md)
-
-1-18 [世卫执委会开会 台湾不提案参与](/articles/rfa/1046663.md)
-
-1-18 [特朗普下台前加码禁华为 抗中科技战坚持到最后](/articles/rfa/1046664.md)
 
