--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-19 [德国研究人员：新冠病毒应来自中国实验室](/articles/rfi/1034463.md)
+
+2-19 [人权组织公民力量发起全球签名活动要求世卫公开新冠中国溯源之行全部信息](/articles/rfi/1034464.md)
+
+2-19 [法国警方围剿黑客勒索软件网络攻击医院行动](/articles/rfi/1034465.md)
+
+2-19 [伊朗欲限制国际核查 欧美四强警告 - 要闻分析](/articles/rfi/1034466.md)
+
 2-19 [G7领导人峰会拜登将聚焦应对疫情与中国挑战](/articles/rfi/1034467.md)
 
 2-19 [美日印澳四方安全对话会议呼吁缅甸回归民主](/articles/rfi/1034468.md)
@@ -592,12 +600,4 @@
 2-14 [法新社统计  欧洲累计染疫不治破80万例 – 法国国际广播电台 - RFI](/articles/rfi/1034761.md)
 
 2-14 [弹劾案参院判无罪 川普：让美国再次伟大运动才刚开始 – 法国国际广播电台 - RFI](/articles/rfi/1034762.md)
-
-2-14 [武汉之行后世卫组织又遭遇滑铁卢 - 要闻分析](/articles/rfi/1034763.md)
-
-2-14 [美参议院否决特朗普弹劾条款，特朗普发声暗示后会有期](/articles/rfi/1034764.md)
-
-2-14 [欧盟呼吁中国撤销BBC世界新闻台禁令](/articles/rfi/1034765.md)
-
-2-14 [欧洲新冠死亡累计破80万人](/articles/rfi/1034766.md)
 
