--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-19 [美国对伊朗政策开始转弯了](/articles/rfi/1034460.md)
+
+2-19 [中国向阿尔及利亚捐赠20万剂新冠疫苗](/articles/rfi/1034461.md)
+
+2-19 [中国在稀土上的压倒性主导地位不可能永远持续下去 - 法国世界报](/articles/rfi/1034462.md)
+
 2-19 [德国研究人员：新冠病毒应来自中国实验室](/articles/rfi/1034463.md)
 
 2-19 [人权组织公民力量发起全球签名活动要求世卫公开新冠中国溯源之行全部信息](/articles/rfi/1034464.md)
@@ -594,10 +600,4 @@
 2-14 [不满恋情曝光扬言毁掉女记者 白宫副发言人请辞 – 法国国际广播电台 - RFI](/articles/rfi/1034758.md)
 
 2-14 [伊波拉疫情再袭几内亚夺4命 – 法国国际广播电台 - RFI](/articles/rfi/1034759.md)
-
-2-14 [英将主持G7领袖会议 抗疫合作列首要议题 – 法国国际广播电台 - RFI](/articles/rfi/1034760.md)
-
-2-14 [法新社统计  欧洲累计染疫不治破80万例 – 法国国际广播电台 - RFI](/articles/rfi/1034761.md)
-
-2-14 [弹劾案参院判无罪 川普：让美国再次伟大运动才刚开始 – 法国国际广播电台 - RFI](/articles/rfi/1034762.md)
 
