--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+2-19 [CNBC：拜登政府将审议美国关键的供应链](/articles/voa/1042817.md)
+
+2-19 [缅甸人继续大规模示威 加拿大英国制裁缅军将领](/articles/voa/1042818.md)
+
+2-19 [拜登政府全面推动疫苗接种计划](/articles/voa/1042819.md)
+
+2-19 [德州遭遇严寒天气 居民互助应对断电断水](/articles/voa/1042820.md)
+
+2-19 [白宫要义: 白宫：拜登将在周五G7峰会与各国领导人谈因应中国](/articles/voa/1042821.md)
+
 2-19 [美国宇航局“毅力号”探测器成功登陆火星](/articles/voa/1042822.md)
 
 2-19 [共和党参众议员再次推出《防止台湾遭侵略法》](/articles/voa/1042823.md)
@@ -590,14 +600,4 @@
 2-8 [中共颁“十禁”布局二十大 专家：习近平未能立威反被打脸](/articles/voa/1043115.md)
 
 2-8 [“非法泄露国家机密” 中国正式逮捕澳籍前中国央视主播成蕾](/articles/voa/1043116.md)
-
-2-8 [菲外长称月底谈判修订美菲《访问部队协议》](/articles/voa/1043117.md)
-
-2-8 [缅甸反军事政变的大规模示威进入第三天](/articles/voa/1043118.md)
-
-2-8 [参议院评估冲击国会击事件中特朗普的作用](/articles/voa/1043119.md)
-
-2-8 [亲子组合隔离四重奏成全球网红](/articles/voa/1043120.md)
-
-2-8 [美国财政部长：如果没有救助协议，美国经济复苏需要数年时间](/articles/voa/1043121.md)
 
