--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-19 [美众院两党议员联袂提议案 力推恢复台湾世卫观察员地位](/articles/voa/1042814.md)
+
+2-19 [秘鲁高官违规提前接种疫苗惹众怒](/articles/voa/1042815.md)
+
+2-19 [口罩供应仍存问题小城开放疫苗接种](/articles/voa/1042816.md)
+
 2-19 [CNBC：拜登政府将审议美国关键的供应链](/articles/voa/1042817.md)
 
 2-19 [缅甸人继续大规模示威 加拿大英国制裁缅军将领](/articles/voa/1042818.md)
@@ -594,10 +600,4 @@
 2-9 [被控“非法经营” 耿潇男案将于春节前开庭](/articles/voa/1043112.md)
 
 2-9 [南非暂停阿斯利康公司新冠病毒疫苗接种](/articles/voa/1043113.md)
-
-2-8 [国际人士批评汇丰银行冻结香港活动人士账户](/articles/voa/1043114.md)
-
-2-8 [中共颁“十禁”布局二十大 专家：习近平未能立威反被打脸](/articles/voa/1043115.md)
-
-2-8 [“非法泄露国家机密” 中国正式逮捕澳籍前中国央视主播成蕾](/articles/voa/1043116.md)
 
