--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-19 [北京再提病毒外来说　世卫专家排除冷链传播](/articles/dw/1043818.md)
+
+2-19 [对北京保持强硬 美财长:关税不变](/articles/dw/1043819.md)
+
 2-18 [维族男子自述：中国国安逼迫我充当间谍](/articles/dw/1043820.md)
 
 2-18 [德语媒体：台湾凭什么给德国救急？](/articles/dw/1043821.md)
@@ -596,8 +600,4 @@
 2-2 [缅甸军方政变 民众抢购物资](/articles/dw/1044116.md)
 
 2-2 [长平观察：踏入历史，修复过往](/articles/dw/1044117.md)
-
-2-2 [世卫调查起源受瞩目 专家: 实地考察比时间长短重要](/articles/dw/1044118.md)
-
-2-2 [驻中使馆订「武汉蝙蝠」T恤?  加拿大：误会一场](/articles/dw/1044119.md)
 
