--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-19 [许颖婷：流亡者需扪心自问离开香港的意义](/articles/voa/1042813.md)
+
 2-19 [美众院两党议员联袂提议案 力推恢复台湾世卫观察员地位](/articles/voa/1042814.md)
 
 2-19 [秘鲁高官违规提前接种疫苗惹众怒](/articles/voa/1042815.md)
@@ -598,6 +600,4 @@
 2-9 [中国据称在靠近澳大利亚的海岛建城 澳总理予以否认](/articles/voa/1043111.md)
 
 2-9 [被控“非法经营” 耿潇男案将于春节前开庭](/articles/voa/1043112.md)
-
-2-9 [南非暂停阿斯利康公司新冠病毒疫苗接种](/articles/voa/1043113.md)
 
