--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-19 [特朗普、谣言和煽动：拉什·林博如何影响美国政治](/articles/nyt/1047175.md)
+
 2-19 [处在十字路口，国民党能否“现代化”？](/articles/nyt/1047176.md)
 
 2-19 [简报：香港批准紧急使用科兴疫苗；得州停电后再遇水危机](/articles/nyt/1047177.md)
@@ -598,6 +600,4 @@
 12-4 [《纽约时报》2020年度最佳电影](/articles/nyt/1047473.md)
 
 12-4 [经历战争、瘟疫和王朝变迁：日本千年老铺的成功秘诀](/articles/nyt/1047474.md)
-
-12-4 [嫦娥五号离开月球表面，开启返程之旅](/articles/nyt/1047475.md)
 
