--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+2-19 [端传媒 | 微信求生记：炸群、转世，以及公共生活的实践（节选）](/articles/cdt/385765.md)
+
+2-19 [基本常识｜茅台院士要不得，关键是科研掺水太多](/articles/cdt/385767.md)
+
+2-19 [每日人物｜这一代年轻人，连离婚自由都没了？](/articles/cdt/385768.md)
+
 2-19 [【中国哭墙】感动不了CCTV，可你早就感动了中国（2月14-19日，2021年）](/articles/cdt/385773.md)
 
 2-18 [叫虱｜因为陈平到美国过年，我被读者气晕](/articles/cdt/385802.md)
@@ -594,10 +600,4 @@
 1-18 [思聪的南方纪事｜一审判决都没生效，就有人开始投诉删文章了](/articles/cdt/386952.md)
 
 2-18 [【CDT档案】举国致之，举国治之：中共刚性体制与新冠疫情之祸](/articles/cdt/386957.md)
-
-1-18 [【异闻观止】法制周末 | 河南济源市委书记张战伟被举报掌掴政府秘书长，原因是秘书长进市领导食堂吃早餐！](/articles/cdt/386958.md)
-
-1-18 [BBC | 华为专利提及可识别维吾尔人技术](/articles/cdt/386960.md)
-
-1-17 [回声Huisheng |我们进了邓飞的“投诉指标”](/articles/cdt/386961.md)
 
