--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-19 [民主党公布移民改革案 在美1100万人可望成公民 – 法国国际广播电台 - RFI](/articles/rfi/1034449.md)
+
+2-19 [白宫官员：国内供应若充足 考虑捐出多余疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1034450.md)
+
+2-19 [缓解紧张关系 美将放宽伊朗外交人员在美限制 – 法国国际广播电台 - RFI](/articles/rfi/1034451.md)
+
+2-19 [G7领袖线上会谈 拜登将聚焦疫情与中国挑战 – 法国国际广播电台 - RFI](/articles/rfi/1034452.md)
+
+2-19 [印度加入美英加等国 升高对缅甸施压 – 法国国际广播电台 - RFI](/articles/rfi/1034453.md)
+
 2-19 [NBA明星赛3/7开打 詹皇杜兰特分任两队队长 – 法国国际广播电台 - RFI](/articles/rfi/1034454.md)
 
 2-19 [美探测车毅力号抵火星 拜登推文恭贺 – 法国国际广播电台 - RFI](/articles/rfi/1034455.md)
@@ -590,14 +600,4 @@
 2-14 [新界乡议局主席初二为香港抽得“中签”](/articles/rfi/1034747.md)
 
 2-14 [纽西兰添社区感染病例 奥克兰一家3口确诊 – 法国国际广播电台 - RFI](/articles/rfi/1034748.md)
-
-2-14 [参院弹劾案判川普无罪  拜登：民主很脆弱 – 法国国际广播电台 - RFI](/articles/rfi/1034749.md)
-
-2-14 [查疫源原始数据不可少 WHO盼中国给资料 – 法国国际广播电台 - RFI](/articles/rfi/1034750.md)
-
-2-14 [美关切世卫疫源调查 吁中国交资料 – 法国国际广播电台 - RFI](/articles/rfi/1034751.md)
-
-2-14 [谢淑薇晋澳网8强 大&amp;#22338;直美笑称不是很期待对决 – 法国国际广播电台 - RFI](/articles/rfi/1034752.md)
-
-2-14 [谢淑薇击败万卓索娃 首闯澳网8强写纪录 – 法国国际广播电台 - RFI](/articles/rfi/1034753.md)
 
