--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-19 [BIE别的｜作为一名24岁的直男，我为什么去做了绝育手术？](/articles/cdt/385760.md)
+
+2-19 [维权网｜获刑14年的“恶俗维基”站长、运维牛腾宇的案情通报](/articles/cdt/385762.md)
+
 2-19 [端传媒 | 微信求生记：炸群、转世，以及公共生活的实践（节选）](/articles/cdt/385765.md)
 
 2-19 [基本常识｜茅台院士要不得，关键是科研掺水太多](/articles/cdt/385767.md)
@@ -596,8 +600,4 @@
 1-18 [立场新闻｜赴美产子微信群里的“爱国妈妈”们举报了“涉港反动言论”](/articles/cdt/386950.md)
 
 1-18 [Jack读历史｜我被连花清瘟投诉了，他们说从没有宣传过可防治新冠](/articles/cdt/386951.md)
-
-1-18 [思聪的南方纪事｜一审判决都没生效，就有人开始投诉删文章了](/articles/cdt/386952.md)
-
-2-18 [【CDT档案】举国致之，举国治之：中共刚性体制与新冠疫情之祸](/articles/cdt/386957.md)
 
