--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-19 [加拿大称对特朗普干预孟晚舟案的指责已无关紧要](/articles/voa/1042809.md)
+
 2-19 [耶伦：目前美国将维持现有针对中国的关税](/articles/voa/1042810.md)
 
 2-19 [抗议“霸凌”：脸书切断澳大利亚用户新闻链接 国际反弹不断加剧](/articles/voa/1042811.md)
@@ -598,6 +600,4 @@
 2-9 [如何看懂特朗普二次弹劾审判的争议与重点？](/articles/voa/1043107.md)
 
 2-9 [香港科大学生会无悔办追悼会被惩罚 中大学生对警方搜捕表遗憾](/articles/voa/1043108.md)
-
-2-9 [畅所欲言的自由转瞬即逝 爆红的Clubhouse疑似被“墙”](/articles/voa/1043109.md)
 
