--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+2-19 [新京报  | “白酒院士”后再现“黄金院士”， 院士到底是怎么产生的？](/articles/cdt/385751.md)
+
+2-19 [维舟 | 年味为什么越来越淡](/articles/cdt/385752.md)
+
+2-19 [中国民主转型研究所 | 新冠疫情对中国人权的影响](/articles/cdt/385753.md)
+
 2-19 [民生观察 | 李霖案被判煽颠罪4年真相](/articles/cdt/385754.md)
 
 2-19 [BIE别的｜作为一名24岁的直男，我为什么去做了绝育手术？](/articles/cdt/385760.md)
@@ -594,10 +600,4 @@
 1-19 [维舟｜硬核防疫与北方的衰落](/articles/cdt/386939.md)
 
 1-18 [奇客资讯｜腾讯官方声称扫描浏览器历史数据是防止恶意登陆](/articles/cdt/386943.md)
-
-1-18 [文史砍柴｜吉林超级传播链显露的保健品市场乱象](/articles/cdt/386946.md)
-
-1-18 [谷雨实验室｜被家暴致死的她，曾想尽力逃出深渊](/articles/cdt/386948.md)
-
-1-18 [立场新闻｜赴美产子微信群里的“爱国妈妈”们举报了“涉港反动言论”](/articles/cdt/386950.md)
 
