--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-19 [汉堡物理学家：“我99.9％确信新冠病毒来自实验室”](/articles/dw/1043806.md)
+
+2-19 [抗议军政府 缅甸少女中弹身亡](/articles/dw/1043807.md)
+
+2-19 [哈瑙枪击案一周年：种族仇恨造成的人间灾难](/articles/dw/1043808.md)
+
 2-19 [G7与慕尼黑安全会议：美欧关系新起点](/articles/dw/1043809.md)
 
 2-19 [缅甸政变不是北京希望看到的](/articles/dw/1043810.md)
@@ -594,10 +600,4 @@
 2-2 [德语媒体：西方应该害怕中国崛起吗?](/articles/dw/1044104.md)
 
 2-2 [缅甸政变后：中国看戏 西方焦急](/articles/dw/1044105.md)
-
-2-2 [新冠之年：中国市场成为德企业务支柱](/articles/dw/1044106.md)
-
-2-2 [世卫调查受瞩目 专家: 实地考察比时间长短重要](/articles/dw/1044107.md)
-
-2-2 [英国为港人开通入籍之路：谁搭上“救生艇“？](/articles/dw/1044108.md)
 
