--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,24 @@
 法广
 ------
 
+2-19 [家属证实 缅甸20岁头部中枪女示威者成首位死亡案例](/articles/rfi/1034424.md)
+
+2-19 [加保守党提交动议 要求议会宣布维吾尔人遭受“种族灭绝”](/articles/rfi/1034425.md)
+
+2-19 [美国宣布对43名白俄官员实施入境限制 2名白俄女记者获刑两年](/articles/rfi/1034426.md)
+
+2-19 [马克龙：应对中国侵犯人权 必须加以明确谴责及建设性压力](/articles/rfi/1034427.md)
+
+2-19 [美财长耶伦：目前将维持现有对华关税](/articles/rfi/1034428.md)
+
+2-19 [消息人士：欧盟将加倍捐款供COVAX运用 – 法国国际广播电台 - RFI](/articles/rfi/1034429.md)
+
+2-19 [第二波疫情冲击 非洲死亡总数破10万大关 – 法国国际广播电台 - RFI](/articles/rfi/1034430.md)
+
+2-19 [拜登G7峰会首秀是西方民主国家联手遏制中国开端？ - 要闻解说](/articles/rfi/1034431.md)
+
+2-19 [印度疫苗外交的后盾：印度血清研究所 - 今日经济](/articles/rfi/1034432.md)
+
 2-19 [美台官方合作破获跨国集团利用免签证待遇赴美卖淫并通报加澳等国](/articles/rfi/1034433.md)
 
 2-19 [委内瑞拉收到首批10万剂俄罗斯疫苗， 开始接种](/articles/rfi/1034434.md)
@@ -582,22 +600,4 @@
 2-15 [中印疫苗外交之战新回合 中国遭指慢半拍](/articles/rfi/1034722.md)
 
 2-15 [德国足球大哥大脸书中文给台湾球迷拜年贴青天白日旗 诚惶诚恐微博道歉](/articles/rfi/1034723.md)
-
-2-15 [英国附和美国 对中国没有充分提供给世卫疫源咨询表关切](/articles/rfi/1034724.md)
-
-2-15 [特朗普遭二次弹劾案：参议院表决终判无罪落幕 - 要闻解说](/articles/rfi/1034725.md)
-
-2-14 [北京有一家“黑暗餐厅”](/articles/rfi/1034726.md)
-
-2-14 [泰国街头再现要求改革君主制的示威](/articles/rfi/1034727.md)
-
-2-14 [小威惊险击退莎芭莲卡猛烈攻势 晋级澳网8强 – 法国国际广播电台 - RFI](/articles/rfi/1034728.md)
-
-2-14 [西班牙加泰罗尼亚疫情下周日选举 独派政党下台存悬念](/articles/rfi/1034729.md)
-
-2-14 [马斯克迷“精英俱乐部” 邀普京自由聊 网问敢邀习近平否？](/articles/rfi/1034730.md)
-
-2-14 [中国人为什么不愿生小孩了？](/articles/rfi/1034731.md)
-
-2-14 [谢淑薇35岁闯澳网8强 笑谈秘诀：假想只有18岁 – 法国国际广播电台 - RFI](/articles/rfi/1034732.md)
 
