--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-19 [拜登对欧洲进行“视频访问” 呼吁盟友共同应对中俄挑战](/articles/voa/1042805.md)
+
+2-19 [缅甸抗议活动出现首个死亡 中枪女抗议者不治身亡](/articles/voa/1042806.md)
+
 2-19 [中国缺煤限电危机未解 专家：主要由国内政治因素所致](/articles/voa/1042807.md)
 
 2-19 [中国提升新闻发言人人数和级别以强化宣传平台](/articles/voa/1042808.md)
@@ -596,8 +600,4 @@
 2-9 [共和党众议员怀特感染新冠病毒住院两周后辞世](/articles/voa/1043103.md)
 
 2-9 [“向中国证明美国依然强大” 新任白宫国安会中国事务主任格维兹](/articles/voa/1043104.md)
-
-2-9 [日本政府抗议中国海警船连续两天进入有争议岛屿海域](/articles/voa/1043105.md)
-
-2-9 [时事大家谈: 拜登对华政策的关键：美国能否拉起民主同盟？](/articles/voa/1043106.md)
 
